--- a/docs/zh/2021/a01.md
+++ b/docs/zh/2021/a01.md
@@ -1,8 +1,13 @@
 # 打卡记录
 
-## 2020-07-31
+## 2021-01-04
 
-星期五
+星期一
 
+* 今天来医院复查了，提心吊胆中。请了一天假还不能看完，上午抽了血，下午做彩超，然后拿结果，明天才能给黄主任看结果。他下午说有事不在。
+* 元旦那天妙优从5和回惠州，我给她做了顿饭吃。昨天5点她过来深圳，我过去接她，然后去珠光，晚上包饺子吃。 
 
+<p>
+    <img :src="$withBase('/res.2021/01/01.jpg')" alt="">
+</p>
 
