--- a/docs/zh/2021/a01.md
+++ b/docs/zh/2021/a01.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2021-01-15
+
+星期五
+
+* 重新整理了计划，并记录了自己要做的事情，希望自己能执行好。
+* 昨天晚上惹妙优难受了，跟她探讨了成熟和痛苦。她提出我们俩有时候无法沟通，我也觉得我说的一些话她敏感地听到了另外一层意思。下次我记住了，不再轻易评论别人，不管是谁都不喜欢被看穿，也不喜欢被片面的评价。就昨天而言，我当时想说的是，如果你不开心了，别让自己太难受，尽快走出来。如果成熟一点，是不是会好一点点，自己就不那么难受了。妙优逆反地回答说，我不想成熟，我难受眼泪就自己流出来了，发泄出来过一会就好了。后面我问妙说你觉得我是怎么样的，我成熟吗？她回答说我是穿着成熟的衣服，假装很成熟。嗯，其实最开始我没想聊成熟的，最起码这个不是重点。但是妙因为我的一句你在家排老二，就想到我说她是小孩子，我只能说我有一点这个意思，但不是全部。后来反驳她说我喜欢成熟的，喜欢涂美甲的，喜欢胸大的。涂美甲她觉得给人成熟的感觉，我不这么觉得，知识觉得好玩，因为李诞之前一头红发还做了美甲，甚至自己想要去试试。然后，从递纸巾开始，到我的假成熟，到我的3代人的忧伤，到我最后自以为的坚强，到把妙优的情绪缓解好。还好及时把氛围扭转了回来，虽然我很后悔当时天真的没有组织语言地说了一些自以为是的话语，但是我知道她因为我不开心了，就得及时处理，不能拖延。先让她安静一下，然后陪在她身边，最后开始尝试解开这个结，总之就是不能冷战。大概在1.50左右，基本上正常气氛了，反倒是我自己有点陷入之前的忧伤，妙妙优来安慰我了。
+* 我想成为向日葵🌻，而你就是我的阳光。
+* 所以以后，我得注意说话发方式，因为我不想对你太表面。成长的过程都是痛苦的，但是一旦吸取了好的养分，明天的那个你会更加的茁壮。
+
 ## 2021-01-04
 
 星期一
