--- a/docs/zh/2021/a01.md
+++ b/docs/zh/2021/a01.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-01-24
+
+星期天
+
+* 快要过年了，票买的是2月4号的，丹丹帮买的，谢谢了。
+* 妙优昨天感冒了，我留下来照顾她。应该是前几天，她穿衣服少了着凉了。发现妙优很多时候都有点叛逆，我说的关心的话语她都有点不以为然。也不知道是为什么，我点出来，她还很生气的样子。哎！
+* 今天下午回到五和换了第30副牙套，终于到了第30副了，还有16副，预计160天，约5个月能完成。大刚，坚持就是胜利。
+* 下午回到五和，先是去了小强家，盘了一通皮侃子，皮侃子的肚子很软。然后去剪了头发，做了头发，这次的比上次的有点红了。而且下次尽量不做了，不能做的太频繁了，对头发不好。
+* 急忙约了1月31号下午去南方科技大学医院做核酸检测，最近约做核酸的人好多啊。
+* 晚上回来继续照顾妙优，刚才给她量体温，37.8度，有点烧。我叮嘱说，如果明天加重了就请假在家里休息。
+
 ## 2021-01-15
 
 星期五
