--- a/docs/zh/2021/a01.md
+++ b/docs/zh/2021/a01.md
@@ -1,5 +1,20 @@
 # 打卡记录
 
+## 2021-01-29
+
+星期五
+
+* 周一股市大涨，白酒和医药都大红，本以为是牛市来了。结果周2-4连跌3天，裤子都要亏无了。以后如果遇到大涨6个点的，一定要抛掉，先把收益拿在手上才是最稳的。
+* 妙说我很那个，还问我承认不，好吧我承认。看来以后得少碰了，再犯就要被看扁了。
+* 快要到回家的时候了，只剩下5天了，今年过年预计和去年差不多，但是还是得好好陪伴家人，不留遗憾。
+* 这几天整理了下简历，让小强帮忙做简历指导，预计年后做相关面试尝试，不能再安逸了。
+* 这几天牙齿有些痛，应该是带了新的第30副牙套和近期上火共同作用的结果，所以买了消炎药含片，并且预计3天不带牙套了。牙套周期图里的时间得往后延3天，出了点小插曲。还有下颌骨右边的鼓鼓的应该是淋巴炎，因附近发炎引起，所以得做好防上火举措。
+* 晚上妙优做饭，做了一个鱼，一个油麦菜，一个腊肠炒青葱，很美味。大刚买了小蛋糕，草莓和火龙果。吃饭的时候 ，我和妙优开始看新剧《山海情》了，是关于农村扶贫的，很接地气的一部剧，很好看。还有，谢谢今天妙妙头晚上做的很好吃的晚餐，辛苦了。
+
+<p>
+    <img :src="$withBase('/res.2021/01/02.jpg')" alt="">
+</p>
+
 ## 2021-01-24
 
 星期天
