--- a/docs/zh/2021/a02.md
+++ b/docs/zh/2021/a02.md
@@ -1,5 +1,13 @@
 # 打卡记录
 
+## 2021-02-26
+
+星期五
+
+* 妙初八凌晨4点才到深，睡了几个小时后就去上班。刚第二天晚上才过去珠光，分别后的重逢，我俩的感情更加的好了。
+* 上了2，3天班后，放了一天假。我们俩睡到11点才起床，然后中午做了饭吃，下午煮了汤喝，晚上去看了《唐人街探案3》。前一天晚上收平板看了《你好，李焕英》，都给我看哭了，有被震撼到。
+* 这个周，已经开始投简历面试了，给自己多一些机会，也让自己快速积累面试经验。
+
 ## 2021-02-16
 
 星期二
