--- a/docs/zh/2021/a03.md
+++ b/docs/zh/2021/a03.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2021-03-12
+
+星期五
+
+* 和妙过着幸福的小日子，好好经营，好好珍惜！！！我们去大沙河泡了步，我们从大沙河骑行到深圳湾，做了2回keeper。
+* 收到顺丰的岗位不合适邮件，心里有点小失落，毕竟已经过了2面了，第三面面试也没啥子大问题，可能还是对方觉得我能力不够了。
+* 金蝶也面试了第三面了，说是一周之内会反馈结果。平安在周一加了hr微信，她要了些补齐材料，目前也是在等通知阶段。
+* 上周末和妙去看了《刺杀小说家》，很好看，一步东方魔幻现实的电影，特效也不错。看完之后去吃了炒花甲，很好吃，后面回家还自己做了炒青口贝，也不错。
+* 开始准备写一本关于工作总结的书，用看云这个平台，processon里的思维导图就是提纲，然后把最近面试的也做一个面试经验总结写进去。
+
 ## 2021-03-05
 
 星期五
