--- a/docs/zh/2021/a03.md
+++ b/docs/zh/2021/a03.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2021-03-19
+
+星期五
+
+* 周末和妙去看了IMAX的《阿凡达》，很不错的体验。在打了很多通淘宝客服电话后，终于把买错了的票给退掉了，不容易啊，下次买票之前一定要看看距离而且是不是能够退票改签。
+* 周二请假去医院复查，黄主任看了血液指标后，让我禁碘做pet和小剂量碘扫检查。下午收到平安和金蝶的hr的薪资沟通，进过一番博弈后。平安给出2.3x12+8w的年约35w的薪水，金蝶给出22x14的年约31w的薪水，最后经过多方位权衡，决定接受平安的offer，预计4月19号入职，顺利的话。
+* 3月17号正式提出离职，并发邮件和内网走流程。和华哥沟通后，先完成自己手头工作的版本稳定，并整理交接稳定和插件化开发的文档。
+* 18号晚上，妙开始练习科目三，25号考科目三。因为她教练不是考场实地练车，她有情绪，晚上回家委屈的哭了。我一个劲的安慰，说教练都是那个鬼样子，我练车时也被骂被打手，别人40多岁的大妈也被教练打手。教练对每个人都是骂的时候，你就不要太在意了，这说明教练德行不够。对考试别太多压力了，70%的努力就行了，一般都是能过的，没过也不要太大负担，还有很多次机会啊。
+
 ## 2021-03-12
 
 星期五
