--- a/docs/zh/2021/a03.md
+++ b/docs/zh/2021/a03.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2021-03-26
+
+星期五
+
+* 和妙关系越来越亲密了，有时候会忍不住。平时一定要多看佛法，继续修行。
+* 妙最近在练科目三，由于他的教练没有去考场做实地训练，所以学的不是很熟练。结果昨天上午考试3号线挂掉了，我开导她说后面再考，而且心态要好，下次约下午的，晚一两周都没有关系，又不是急着拿证。
+* 开始整理交接文档，并在看云总结对应项目的收获。
+* 继续阅读《男人来自火星，女人来自金星》的6，7章，跟进计划。
+* 已经禁碘1周多了，加油。
+
 ## 2021-03-19
 
 星期五
