--- a/docs/zh/2021/a04.md
+++ b/docs/zh/2021/a04.md
@@ -1,5 +1,18 @@
 # 打卡记录
 
+## 2021-04-09
+
+星期五
+
+* 周二去南山慈铭做平安入职体检。
+
+* 周三到医院做了全面的检查，全血、甲功5项、尿碘、肿瘤8项、肝功6项等。然后一同把petct的检查报告给黄主任看，最后他给我开了做小剂量碘扫描的检查。次日9点先喝5豪居，后天下午3点去做扫描。
+* 周四喝了药，中午吃了乌鸡汤喝饺子，晚上回去吃了香菇鸡和荷兰豆，然后和妙分开睡了，怕身体里的辐射影响到她。
+* 开始加速处理离职流程了，到处催人求人，很麻烦但是还是得弄，希望能一切顺利。联系了济南的亮哥帮忙处理那边大厅的离职手续，之前申请的电脑也是麻烦他帮忙处理的，所以给他寄了箱橙子犒劳下。今天需要的材料基本上都准备好了，也已经催着领导们审批完成了(3/6)。
+* 昨天发了第二版离职交接文档给老大。
+* 平安入职流程里的体检报告审核通过，我也仔细查看了体检报告，有4个问题，血压，肝囊肿，肝钙化灶，甲状腺。以后要11点前躺下，12点前入睡，1点准时排毒。
+* 下午3点去市二医院做碘扫描，等待结果，希望是好的结果。加油！！！妙晚上部门聚餐，说是吃烧烤。
+
 ## 2021-04-02
 
 星期五
