整理并打卡

--- a/docs/zh/2021/a04.md
+++ b/docs/zh/2021/a04.md
@@ -1,5 +1,21 @@
 # 打卡记录
 
+## 2021-04-16
+
+星期五
+
+* 基本已经完成工作交接，周一请了小凤总和小胡吃了外婆家，吹水感觉一直都在。
+
+* 浪潮离职流程还在慢慢走着，担心19号入职不了，就联系平安hr往后延迟了2天，到21号入职，希望不会出什么岔子。
+
+* 这2天整理了redis的来回摩擦笔记，加深理解了相关知识，准备写个java版的redis程序。
+
+* 开辟新的阅读计划页，记录今年的阅读书籍。
+
+* 华哥去广州封闭式开发，一周没回，以后再能请他吃饭吹水了。
+
+  
+
 ## 2021-04-09
 
 星期五
