--- a/docs/zh/2021/a04.md
+++ b/docs/zh/2021/a04.md
@@ -1,5 +1,33 @@
 # 打卡记录
 
+## 2021-04-25
+
+星期天
+
+* 4月23号入职平安，开始适应高端人才的生活和节奏，其实就是换了新的环境后，熟悉上班路线，工作环境，新的同事，新的团队配合模式等，相信自己能够做好吧。
+
+* 计划51和妙去广西桂林旅行，已经联系好了自由行，预订了行程。
+
+  ```txt
+  桂林山水之旅
+  第一天：抵达桂林，管家接站，入住桂林市区酒店，推荐到正阳步行街吃美食。
+  第二天：船游兴坪漓江（20元人民币背景图）→兴坪古镇→梦幻漓江(大型山水实景演出),住市区晚上可以去日月双塔【含早中餐】
+  第三天：观石堂(国家3A级景点)→十里画廊（桂林最美风景区）→遇龙河竹筏-抖音打卡地→银子岩（亚洲最美溶洞）,西街，住阳朔【含早中餐】
+  第四天：少数民族村寨(古风建筑体验民族文化)→抱璞民族风情园(推荐必去之地)→訾洲象鼻山（桂林城徽），结束行程。【含早中餐】
+  ```
+
+  ```txt
+  小张温馨提示：
+  1.🚄出行带好个人有效证件； 
+  2.👧女生做好防晒，备雨伞，桂林有时候下阵雨；
+  3.👉穿舒适的鞋子，桂林属于自然景区。
+  4.❌桂林是旅游城市千万不要轻信路边的野马导游，用低价吸引，都是有陷阱的，缠上很难脱身。 
+  5.🚲在市区出行绝对不要坐乘坐三轮车，会带去高消费的娱乐场所，选择滴滴打车，或者骑行小黄车； 
+  6.⚠外出消费一定要先询价，避免被宰客
+  7.桂林的食品，生活用品，装饰等特产,再根据自己喜好购买
+  8.桂林少数民族多，请尊重当地的民俗习惯，不要与当地人发生争执，有任何事情请第一时间联系导游！
+  ```
+
 ## 2021-04-16
 
 星期五
@@ -14,7 +42,6 @@
 
 * 华哥去广州封闭式开发，一周没回，以后再能请他吃饭吹水了。
 
-  
 
 ## 2021-04-09
 
