--- a/docs/zh/2021/a05.md
+++ b/docs/zh/2021/a05.md
@@ -1,5 +1,43 @@
 # 打卡记录
 
+## 2021-05-18
+
+星期二
+
+* 上周天，妙因为我没说一起和她拖地，她就生闷气了，后来我给她解释了后又给哄回来了。每次生气后，再和好，我感觉我们的感情就更好了。
+* 这几天在折腾k8s的nginx-ingress的代理，可算是给我折腾处理了。
+
+## 2021-05-12
+
+星期三
+
+* 搭建虚拟机环境安装k8s。
+
+```
+Your Kubernetes control-plane has initialized successfully!
+
+To start using your cluster, you need to run the following as a regular user:
+
+  mkdir -p $HOME/.kube
+  sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+  sudo chown $(id -u):$(id -g) $HOME/.kube/config
+
+Alternatively, if you are the root user, you can run:
+
+  export KUBECONFIG=/etc/kubernetes/admin.conf
+
+You should now deploy a pod network to the cluster.
+Run "kubectl apply -f [podnetwork].yaml" with one of the options listed at:
+  https://kubernetes.io/docs/concepts/cluster-administration/addons/
+
+Then you can join any number of worker nodes by running the following on each as root:
+
+kubeadm join 192.168.99.100:6443 --token w62g4b.khy1y5r5zku018wi \
+	--discovery-token-ca-cert-hash sha256:25cb0bfb920ae42b7bd0363636f2b889a20105f2029fc9d00bdc3e3ef8dcce64
+```
+
+
+
 ## 2021-05-08
 
 星期六
