--- a/docs/zh/2021/a05.md
+++ b/docs/zh/2021/a05.md
@@ -1,11 +1,29 @@
 # 打卡记录
 
+## 2021-05-27
+
+星期四
+
+* 周6加班了，配合前端做工时联调。
+* 周天和妙一起去看《速度与激情9》，电影还行，对我一个1到9都看了的老速激迷，还是很满足的。别人都说把车子开到太空了都，是什么鬼。我是觉得挺搞笑的还，不过妙前半段说都是开车，看的都睡着了，哈哈。
+
+* 5月26号和文韬去PAFC打了第二针疫苗，好像深圳疫情开始严重了。
+* 昨天晚上妙做了蛋挞，非常好吃，就和麦当劳里的一样，真是个妙妙小能手。
+* 帮妙打包货物，很高兴能帮到妙。
+
+## 2021-05-20
+
+星期三
+
+* 今天是5月20，早上起床给妙发了520的红包，晚上回家买了139的9朵玫瑰花送给她。虽然平时被工作生活忙碌着，但是还是得有一些仪式感，对爱情要保持热爱。
+
 ## 2021-05-18
 
 星期二
 
 * 上周天，妙因为我没说一起和她拖地，她就生闷气了，后来我给她解释了后又给哄回来了。每次生气后，再和好，我感觉我们的感情就更好了。
 * 这几天在折腾k8s的nginx-ingress的代理，可算是给我折腾处理了。
+* 处理点子队列里的关键字，输出到芒果卡片中。
 
 ## 2021-05-12
 
@@ -46,3 +64,4 @@ kubeadm join 192.168.99.100:6443 --token w62g4b.khy1y5r5zku018wi \
 * 上班3天，写了287行代码，哈哈，不错啊。
 * 要认真生活，爱惜自己，也要好好对待时间。
 
+* 合计了一下，包含火车票+报团费+桂林消费大概花了6400元，玩了3天，看了风景，体验了旅行，还行吧。
