--- a/docs/zh/2021/a06.md
+++ b/docs/zh/2021/a06.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2021-06-11
+
+星期五
+
+* 周4分享应用部署容器化docker+k8s，讲了2个半小时，也不知道他们吸收了多少。
+* 周2晚上洗澡的时候，不小心碰到了鼻子，流了好多血，以后要注意。也可能是太上火了，一碰就出血。
+* 最近疫情又变严重了，周末去西丽南方科技大学医院做了核酸。
+* 10号上线，公司点了烧烤加班餐。今天发工资了，快浪潮的2倍了，以后要继续加油，努力学习提升自己。
+* 周末准备和妙一起过端午节，做饺子吃。
+
 ## 2021-06-07
 
 星期一
@@ -9,6 +19,8 @@
 * 最近发现做了很多无用的事情，比如妙做了核酸后发现牙医助理通知3天内核酸才有效；去壹方城吃太二酸菜鱼因为辣没吃好，逛街因为漫无目的提了几句后妙情绪转冷（后来妙说下次找闺蜜去逛街，就不和我一起了太不懂逛了）；回五和发现养了好久的栀子花死掉了，难受啊；打游戏被打的要死，赢一把也难；晚上回来珠光，帮妙打包寄快递，顺便把姐姐需要的手机和丝巾也发往了武汉。
 
 * 处理个人计划内的任务，将腾讯云主机升级到k8s部署化。
+
+* 给妙买了衣服，她自己在网上买的，我给报销。
 
 * 重新整理，开始新的生活。
 
