--- a/docs/zh/2021/a06.md
+++ b/docs/zh/2021/a06.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-06-15
+
+星期二
+
+* 昨天是端午节，深圳的我来加班了，因为可以赚三倍工资。家里的大姐和姐夫开着车，去梅家湾接了老板和爷爷到她家过端午节。中午先是做了7个好菜，有肉有素，晚上包了包面，甚是丰盛。下午姐姐带着2位长辈去街上买衣服，老爸听姐姐说是我可以报销，这才把自己觉得很贵的衣服笑眯眯地收下。
+* 晚上我给老爸打了视频，和老爸聊了下家里装修的进展和今天端午的琐事。我一直跟老爸强调，您现在快60岁了，不要再那么拼了，一切以身体健康为重，另外该有的体面也得跟上来。我不知道他听进去多少，老爸只是有点不耐烦地回答着，嗯，知道了。
+* 我呢，在深圳和妙一起已经过着柴米油盐的生活，希望能在平平淡淡中体味幸福，相互珍惜。
+* 闲暇时和妙在看《觉醒年代》，被里面的鲁迅先生震撼到，有了重新了解鲁迅先生的冲动。
+* 刷手机时无意看到一则“今日事，今日毕”的推文，突然让我觉得被触碰到。
+* 昨天去超市买了个榴莲，75元一个，肥来后拆了一点，妙说还没完全熟，先放放。
+
 ## 2021-06-11
 
 星期五
