--- a/docs/zh/2021/a06.md
+++ b/docs/zh/2021/a06.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-06-27
+
+星期日
+
+* 今天来加班了，710版本的功能基本上写完了，但是没有自测和联调，今天务必把自己能测试的都给测了，周一和前端联调功能记录页的一个接口即可。
+* 昨天周六，中午吃的椰子鸡，晚上吃的海底捞火锅，自己在家里弄的。本来已经买了票去看《当男人恋爱时》的电影的，可是妙下午突然发热不舒服了，就没去了，把我吓到了。一边给她用湿毛巾贴额头，一边擦手，心里想着好好照顾她。她安静休息的时候，我就自己玩游戏打发时间，这一天也算是过的充实。
+* 这段时间，又开始玩游戏了，好像是因为上班时长拉长了，就特别像要玩游戏来平衡。没什么不好，可就是没花时间去投入学习了。
+* 最近把同事介绍给梦丽，后来没有结果，就不了了之了。
+* 因为疫情，这段时间做了3到4次的核酸，索性都是阴性，就是过程麻烦了点，因为排队的人是真的多。
+* 6月harmonyOS发布了2.0版本，看到其中的超级终端，很是被吸引，未来可期。
+
 ## 2021-06-15
 
 星期二
