--- a/docs/zh/2021/a07.md
+++ b/docs/zh/2021/a07.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-07-12
+
+星期一
+
+* 时间很快，今天早上看到小强说孩子已经出生了，恭喜小强喜得贵子啊。
+* 这段时间，基本上算是习惯了平安的上班节奏，一个月一个版本，按着规定的开发流程走就行了。
+* 710上线的版本发现有个需求做的时候没有考虑得很全面，导致这周5需要发版上线，可能会耽误妙的生日。以后做需求，做事情一定要认真，多多考虑可能出现的问题。将事情尽可能的做好最好，这样就能少很多返工。
+* 要改掉坏习惯，不能总是胡思乱想，每天尊重时间，日出而作，日落而息。
+* 今天准备去壹方城给妙买包，做为她周五的生日礼物。然后本周得完成类似周年总结的页面跑马灯，部署后发给妙小宝。
+* 妙今天去医院看牙了，然后和医生约好下周4做手术，到时候我会请假陪她一起去，这样的需要陪伴的时刻，我坚决不能缺席。
+
 ## 2021-07-02
 
 星期五
