--- a/docs/zh/2021/a07.md
+++ b/docs/zh/2021/a07.md
@@ -1,5 +1,13 @@
 # 打卡记录
 
+## 2021-07-13
+
+星期二
+
+* 昨天下班，6点30分左右，发现审核人的工作提醒重复发送了60次，因为我的cron表达式配置错误。秒的位置应该是0，配置成了*，导致了生产环境上的事故。得知后，心情极度低落，整个人都不好了。不过还是坚持着陪妙去买了她的生日礼物，coach的包，黄色的。回来后也把要发的货打包发走，因为打印机一直卡顿的缘故，过程甚是艰难。
+* 今天比平时都早一点去上班，上午世军和永庆老师开了需求下发排期回忆和昨日事故回溯会议。我承认自己粗心配置错了cron表达式，测试说没有测到定时任务执行这块，因为我们都是手动执行一次测试的。后面给出结论说，此次事故影响严重，借此把开发测试流程完善起来，和一些配置的权限规范起来，责任就不过于追究了，主要是把后续的问题处理好。
+* 发生这些事情，我需要深刻反省，因为自己的一个不小心，给很多人造成了多余的工作量。以后要认真学习，认真生活，认真工作。坚决不能再犯这些错误，不能让人看不起。加油啊，梅刚！
+
 ## 2021-07-12
 
 星期一
