--- a/docs/zh/2021/a07.md
+++ b/docs/zh/2021/a07.md
@@ -1,5 +1,19 @@
 # 打卡记录
 
+## 2021-07-19
+
+星期一
+
+* 上周五妙过生日，可是我刚好当天有个紧急版本，就不得空给妙过生日了。妙周五晚上回惠州了，回家过生日了也好。
+* 上周买的《kubernetes in action》的书籍已经收到，得把读书计划安排上了。
+* 又快到了去医院复查的日子，虽然3个月前已经被黄医生下结论治愈，但是还是很不安心，因为我的脖子始终不得劲。
+* 昨晚去地铁口接了妙，送上了鲜花11多，买了2人食的蛋糕，美中不足的是在煮排骨时抽空去帮妙打包快递而煮糊了排骨。
+* 妙吃着排骨（我让她别吃糊了的，可能就没几块是好的），我问她怎么了，她也不回答。只是看到她眼角有点湿润，我猜想可能是她联想到以后跟着我过日子，可能会吃苦，心里一下子难受导致的。
+* 吃完饭，我摆上蛋糕，为妙带上生日皇冠，点上蜡烛，一边拍视频一边唱生日快乐歌，祝福我的妙笑颜永驻，平安快乐。手机里的妙，是笑着的，那笑容很美好，有你真好。
+* 可能是因为妙回了趟家，姐姐让她带我过去见见。她就想到我们的未来，关于是否合适，关于深圳买房，关于我是否值得托付。这些未知的东西，一下子就压得我喘不过气来。我就说我们都是平凡人，要接受平凡的现实，200万，400万的房子谁都想买，但是很难。
+* 关于未来，其实要怎么走，我也没有想好，只能是船到桥头自然直了。（可能这份态度，妙觉得不是很妙）
+* 以后不能再放肆，不能越界，不能逃避责任。加油啊，梅刚！！！
+
 ## 2021-07-13
 
 星期二
