--- a/docs/zh/2021/a07.md
+++ b/docs/zh/2021/a07.md
@@ -1,5 +1,18 @@
 # 打卡记录
 
+## 2021-07-27
+
+星期二
+
+* 上一周把pks的stg1环境基本上搭建好了，除了gateway之外。
+* 这2天整理pks的ppt第二篇，将综合管理平台业务组件容器化，讲述原理支撑，计划实施，遇到的问题踩坑解决，以及持续推进。
+* 上周4请假一天陪妙去做牙齿治疗，上午就做完了，下午就在家里一起看《北辙南辕》。
+* 上周天下午和妙去看了电影《燃野天空的少年》，是一步歌舞青春的电影，很阳光，很想跳舞。看电影时喝了可乐，看完后一起去小屋子里唱了歌，很开心。晚上去西丽366大街吃了电白鸭粥，回到家打包寄东西。睡觉时，妙说聊聊，就聊到以后生孩子谁照看，我都不好怎么回答。然后她就急了，哭了，一晚上也没怎么睡好。
+* 老爸在家里装修老家的房子，爸爸辛苦了。发了很多照片，基本上知道了装修的进展，爸爸也弄的比较有劲。昨天晚上给老爸转了5000块钱（加上第一次开工的15000，我已经投了20000了），老爸出力，我在外面工作的就出点钱。希望以后的生活越来越好，加油啊！（给老爸争口气）
+* 今天小强修完陪产假来上班了，15天（自然日）一下子就过了，小强的儿子都半个月了。微信上聊了一些比较深入的话题。威哥抱怨生活难工资低，小强说一家7口人全靠他一个人工资，我说出将来生了孩子谁带，小灰灰说只想下班回去上号。
+* 今天一看信用卡账单5900，额钱真的是好花，也不知道怎么就花了这么多，工资根本不够用。
+* 昨天基金大跌，一下子就-3000了，不过别慌，稳住，下跌才是加仓的时机，最后肯定会触底反弹的，加油啊。
+
 ## 2021-07-19
 
 星期一
