--- a/docs/zh/2021/a08.md
+++ b/docs/zh/2021/a08.md
@@ -1,10 +1,31 @@
 # 打卡记录
 
+## 2021-08-05
+
+星期四
+
+* 周二请假去医院复查了，又花了500多（检查+买药），3个月后复查，药量调小了点。
+* 周三去石厦马成办公3208开了一天会，上午需求评审，下午福田项目组经理肖永华老师给我们预估三个模块的工作量。
+* 今天上午研究了下html2pdf的解决方案。
+
+```
+html2pdf方案：
+1. 工具转   （spire.pdf,wkhtmltopdf等)
+2. Java写PDF（itext)
+3. phantomjs
+4. jvppeteer
+```
+
+* 下午把福田的后端代码跑起来了，并且配置了hosts，能够正常访问了。文韬也把预估要的工时计划整合前后端后发邮件给了肖老师，应该在下周启动开发。
+
 ## 2021-08-02
 
 星期一
 
 * 上周5收到通知，说所在项目被删减，人员需要调整，虽然不会直接裁人，但是会被安排到交付项目上，弄的办公室人心惶惶。
+
 * 原定这周五晚上的团建活动（干饭+K歌），也因此被提前到这周五举行。我们一行去吃了海鲜大排档，然后回家了，他们继续去唱歌。小强回办公室加了下班，小灰灰和我一起从车公庙地铁回家了。
+
 * 周末和妙妙头在家里宅了2天，周天配她去拆线（牙齿），然后在家里做了饭吃，发了货，刷了剧，虽然这样很安逸，但是我们很享受。也会在假期快要结束的时候抱怨一句，在家呆了2天啥事情没做。
-* 
+
+  
