--- a/docs/zh/2021/a08.md
+++ b/docs/zh/2021/a08.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2021-08-10
+
+星期二
+
+* 将mb和plan的ng代理切换会gitee pages上，不依赖k8s发布了，比较费流量。
+* 开始整理计划，包括读书计划，代码实战计划，上层建设扩展计划。（通过process梳理）
+* 情人节快到了，要准备给妙买礼物了，也不知道她喜欢啥。花阔以买一朵，不买多了，放到家里也是等着枯萎！把钱留着去买吃的，还香一些。
+* 昨天去了马成开会，基本上确认了831版本要做的事情了，这次一定要写好代码，严格要求自己。
+* gitee计划中整理出"健康"的项目，把复查和健康相关的item移动到该项目之下。
+
 ## 2021-08-05
 
 星期四
