--- a/docs/zh/2021/a08.md
+++ b/docs/zh/2021/a08.md
@@ -1,5 +1,13 @@
 # 打卡记录
 
+## 2021-08-11
+
+星期三
+
+* 下载《重学Java设计模式》的代码。
+* 学习了重学设计模式的迭代器模式。
+* 今天早上7点起床，7点30开始喝汤（昨天晚上煮的冬瓜扇骨汤），8点前出门，我们都没有迟到。
+
 ## 2021-08-10
 
 星期二
