--- a/docs/zh/2021/a08.md
+++ b/docs/zh/2021/a08.md
@@ -1,5 +1,23 @@
 # 打卡记录
 
+## 2021-08-18
+
+星期三
+
+* 上周6是七夕，没有提前做好出行攻略，导致给妙妙头过了个不算好的节日。送了一朵玫瑰花，我心想着把省下来的钱放到买礼物中，和妙商量后计划给她买个耳钉，预算500（其实进了店之后，只要是妙喜欢的，我感觉我都能买）。妙给我准备了保温杯当礼物，好像每次妙都会给我送礼物，但是说实在的我也谈不上很喜欢，喜欢的是她给我准备礼物的心意，因为那些礼物我后来可能没用上，没有实用价值。妙见我没准备礼物给她，她就不开心了。我思考了很久后，觉得这样的情况不能继续再下去了，就把这件事往透了说，虽然过程会流泪会痛苦，但是沟通之后还是能敞开心扉的，也变得更加能够相互理解。当天，中午我们在家吃了椰子鸡，（我弄椰子，妙准备其他），下午5点开始出门，准备前往《湾区之光摩天轮》，因为是当天下午才确定的，所以完全都没有提前规划（这个是我的问题，以后不能这样了），不能因为自己不擅长就不作为。出门后，我们在壹方城逛了珠宝店找耳钉，由于顾客太多店员都不服务，妙就没心思看了（主要是耳钉也没啥款式，都是戒指7夕主打）。接着挂了号，说吃烤肉，由于人太多（最后等到等了2个半小时，但是我们已经离开了），就买了2杯米芝莲奶茶千万临海站湾区之光。到了之后，直呼好家伙，摩天轮好大，被五颜六色包裹着，闪烁着，很是好看。
+* 本来因为人太多了，排队的人都见不到队尾巴，再加上晚饭还没吃上，想着回去了，经过一番思想斗争后，还是去排了队，等着去坐摩天轮。大约1个小时后，我和妙终于坐上了摩天轮，妙开始怕了，坐着椅子不起来，我怕时光流逝又没做啥，所以拼命想要抓住此时此刻。拍了些照片后，摩天轮时光结束了。下了摩天轮之后，去了WC，出来已经10点多了，找了几家吃饭的，都说已经打烊了。所以就没得吃了，逛了下耳钉，最后也没有买，赶上了最后一班地铁，回到了西丽，打车回珠光。
+* 到家都到了1点了，我们俩都饿的不行了，就煮了面，放了汤达人的料包，加了一个鸡蛋（只有一个），吃完了之后，睡觉，结束了这累累的一天。
+
+
+
+* 周天下午在附近找了下房子，看了丰窝公寓，一房一厅3200，单间2380，都是精装修的，我直呼这么贵，要不起。
+
+* 昨天晚上又吃了一顿散伙饭，AA的，世军带去吃的顺德佬，很好吃很不错，人均160。
+* 最近因为平安智慧企业工作不稳定，会裁员，弄的大家人心惶惶，无心工作，世军彭国都开始找工作，面试完后就回来讨论面试题，弄的大家都挺焦虑的。我这边先还是做好手头的工作吧，就算要走也要等被裁然后拿补偿，然后再准备面试。不要害怕，生活虽然很苦，但是还是得好好面对。
+* 最近读完了华为小傅哥写的《重学Java设计模式》一书，感觉写的还是比较好的，22个模式分为3大类，每个模式列举一个场景，并用代码实现，最后总结。不过有的例子感觉举的很好，有的也不是很好，开始有一些自己的见底了。正好最近在做福田二期的看板需求，对月度、季度、年度的查询条件实现和人员相关情况的格式化，就合理的使用了策略模式还实现，提高了代码的扩展性和可读性。
+
+
+
 ## 2021-08-11
 
 星期三
