--- a/docs/zh/2021/a08.md
+++ b/docs/zh/2021/a08.md
@@ -1,5 +1,13 @@
 # 打卡记录
 
+## 2021-08-25
+
+星期三
+
+* 地铁上开始继续看k8s的视频了，了解了k8s的存储、以及调度过程。（k8s的笔记思维导图输出）
+* 工作上可能要到上梅林办公了，再狗5个月拿年终奖。生活上房子快要到期了，准备回五和把房子处理掉，轻装上阵和妙合住。（先在703住着，边在外面找找一房一厅，找到合适的再搬）。身体上，脖子虽然怪怪的，复查没发现问题；牙齿需要进入第二疗程了，可能还需要40多副的治疗过程。（太南了，不过有效果的话还是坚持一下）
+* 学习上，开始上层k8s和算法的深入。以结构化思维分析和细化要做的事情，比如知识体系，博客整理等。
+
 ## 2021-08-18
 
 星期三
