--- a/docs/zh/2021/a09.md
+++ b/docs/zh/2021/a09.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-09-10
+
+星期五
+
+* 已经在上梅林上了一周班了，参与代理招聘模块，负责官网微官网的功能开发支持。
+* 上周6和妙一起找到了房子，一个2600的2楼最左边的房子，然后第二天下午到五和把我的东西打包搬了过来，叫了个货拉拉花了160。
+* 周一晚上和妙一起把34栋201的房间的卫生打扫了下，准备这周末搬进去。
+* 王医生说第二阶段的牙套到了，准备明天上午过去拿。
+* 今天是教师节，早上给翠姐发了祝福，现在她也算是个老师了。
+* 已经填写了中秋和国庆加2天班，搞3倍工资。
+
 ## 2021-09-03
 
 星期五
