--- a/docs/zh/2021/a09.md
+++ b/docs/zh/2021/a09.md
@@ -1,12 +1,21 @@
 # 打卡记录
 
+## 2021-09-17
+
+星期五
+
+* 上周6去五和把616房间清理了下，带回了吉他。下午到珠光，开始搬妙妙头的东西，好家伙，硬是搬到了晚上8点，还没搬完。不过搬的差不多了，晚上就住进了207。太累了今天，不容易，生活很苦，但是还是要积极乐观的活下去。
+* 这是到上梅林劳派项目的第二个周，基本上适应了工作节奏。可是项目太坑，小兵小强文韬都在吐槽，其他同事也是骂代码写的跟粑粑一样。波哥这周已经休陪产假了，不过工作还是照常进行。
+* 周3去电信营业厅办了网，129元/月，办了1年。第二天顺利拉了网线，已经有网了，网速300M。
+* 工作上，发现劳派项目组上的人，很多都在摸鱼，给人一种大家都很忙，但是又经常吹水的感觉。这边的管理者，真不知道他们做了啥事，没起到啥作用，每次开会就是说一些很空洞的话，然后让人加班，克服一下工作上的难点，赶赶进度。
+
 ## 2021-09-10
 
 星期五
 
 * 已经在上梅林上了一周班了，参与代理招聘模块，负责官网微官网的功能开发支持。
 * 上周6和妙一起找到了房子，一个2600的2楼最左边的房子，然后第二天下午到五和把我的东西打包搬了过来，叫了个货拉拉花了160。
-* 周一晚上和妙一起把34栋201的房间的卫生打扫了下，准备这周末搬进去。
+* 周一晚上和妙一起把34栋207的房间的卫生打扫了下，准备这周末搬进去。
 * 王医生说第二阶段的牙套到了，准备明天上午过去拿。
 * 今天是教师节，早上给翠姐发了祝福，现在她也算是个老师了。
 * 已经填写了中秋和国庆加2天班，搞3倍工资。
