--- a/docs/zh/2021/a09.md
+++ b/docs/zh/2021/a09.md
@@ -1,5 +1,23 @@
 # 打卡记录
 
+## 2021-09-24
+
+星期五
+
+* 昨天和妙妙头列出了家庭计划表，从今天起开始执行。
+* 晚上和妙先做饭吃，我炒了个水瓜鸡蛋和胡萝卜炒肉；然后吃完去发货，顺便买了西瓜提着去大沙河散步。路上我给妙讲最近读《樊登读书》里的书籍，一本是《爱因斯坦传》，从爱因斯坦小时候到他发表光电效率，到《狭义相对论》，到《广义相对论》，到得罗贝尔物理学奖。一本是《人类简史》，从人类出现开始，到狩猎时代，到农耕时代，到帝国时代，到科学革命，到现在社会。谈心很好，说了很多，很有意思。
+* 今天写周记，暂且就先记录这些呗。
+
+## 2021-09-21
+
+星期二
+
+* 今天是中秋节，来上梅林加班了，搞3倍工资，把微官网用户相关的代理接口（12个）都给代理包装好并验证通过。妙前天下午回惠州和她姐姐一起过节， 今天下午6点回深，我6点下班去深圳北站接她，哈哈，完美。
+* 中秋假期前2天放纵了，刷了《星辰变》，看了《鬼吹灯之云南虫谷》，也看了《斗罗大陆》，还打了游戏，玩的不亦乐乎。
+* 昨天晚上和翠姐，还有老爸，打了视频电话，聊了下家常，今天发了100的中秋红包，联系联系情感之外，也知道一些亲人最近的情况。
+* 现在算是做到了面对真实的自己，但是还是改不了坏习惯。痛恨抖音，真的做到了不刷抖音，但是慢慢的开始刷哔哩哔哩了；知道打游戏不搞学习不好，但是还是会因为想和朋友一起玩，就2天把号挂着，时不时的玩上一句；知道没有时间刷剧，可还是因为首页推荐想要一睹优秀的热剧。如何改掉坏习惯，是当下最为迫切的事情，看看是不是能通过《樊登读书》里提到的一些方法解决掉。
+* 最近在看《樊登读书》，觉得这个人说的一些东西很对。比如说，如果一个人没有意识到自己的潜意识，那它将是自己的命运。（我自己的话，每次和老爸沟通，最后都会无法心平气和。到现在我才意识到，小时候到长大，爸爸很多事情都没有管，直到妈妈婆婆都不在了，他还是有一些事情不管，我就会有情绪。其实这是一种抱怨爸爸不作为的潜意识在作祟，现如今我意识到了这一点，我就不会再和老爸沟通时发火了，不再陷入之前的命运。）
+
 ## 2021-09-17
 
 星期五
