--- a/docs/zh/2021/a09.md
+++ b/docs/zh/2021/a09.md
@@ -1,5 +1,20 @@
 # 打卡记录
 
+## 2021-09-29
+
+星期三
+
+* 周天晚上去修理了牙齿，第一副牙套还需要带10天，也就是10月2号再去复查。下午搬了85栋703剩余的东西到207，并且把空调冰箱留（卖）给了房东。
+
+* 升级我的博客主题为`yiia-plus`,在折腾集成`giteement`和`gitment`评论后无法正常使用后，还是使用畅言评论。
+
+* 今天妙回家了，下班后到她表哥那里去了，然后坐着表哥的车回梅州。羡慕啊，妙妙头已经放假了，大刚还得上4天班。
+* 自从列出了家庭计划表之后，务必按照计划执行，没有特殊情况不得违背。
+* 昨天妙妙头最后一晚在深圳，所以就没有按照计划表执行了，不过还是打单发货了，然后一起躺在床上相互贴了面膜，只是我没有搞学习。
+* 把家庭计划表放到我的计划首页。
+* 把我的计划加到芒果卡片小程序里，版本号放出来，升级为3.3.1。
+* 最近刷bilibili时，刷到一首《有谱》,这首歌很有态度。喜欢里面的歌词，别人躲雨，我在雨里散步。
+
 ## 2021-09-24
 
 星期五
