--- a/docs/zh/2021/a10.md
+++ b/docs/zh/2021/a10.md
@@ -1,5 +1,18 @@
 # 打卡记录
 
+## 2021-10-08
+
+星期五
+
+* 国庆加了3天班，1号到3号，好家伙3个3倍，就是9天工资，得有9千吧，哈哈。
+* 妙妙头30号回家，2号晚上返深，3号和堂姐吃了午饭后，回到207。
+* 10月4号，我们一起去看了电影《长津湖》，很好看，全程无尿点，倒是3个小时看了2个小时确实是憋不住了，就出去放尿了下。电影最后一幕，给我震撼到了。美国军扯离途中，看到前方有中国士兵埋伏，走近一看，才发现是先烈们盯着前方被雪给冻僵了，冻成了雕塑。面对如此毅力的对手，将永远也无法战胜。革命英雄，永垂不朽！！！
+* 看了电影后，我和妙去吃了烤肉，因为是一家比较小的门店，空气不流通，我给吃晕了。之后去买了回力的鞋子，一人一双，还让老板每人送了一双袜子。接着去周六福给妙买了1000块的黄金耳钉，算是兑现情人节礼物。后面妙还买了个周生生的小耳钉，500多点，准备送给朋友做礼物。不太好的是，回来之后妙有点小感冒了，一直打喷嚏。
+* 10月5号，我们没有出门在家里宅了一天。晚上和妙优谈心，开诚布公的谈了很多事情，关于买车，买房，各自老家情况等。
+* 10月6号，准备出门来着，可是外面下雨，然后妙感冒还没完全好，就也还是在家里。不过倒是做了好吃的，煮了汤喝，还去大沙河散步，走到宜家又回来。回来的时候，我俩一边吃这北京面，一边走着，聊着，很惬意，这种感觉很好。我为了找话题，不停的说话，把最近看的《未来简史》记得的点给瞎说了一通。
+* 10月7号，本来是准备9点起床的，结果昨天晚上散步太晚，所以就起晚了。中午吃过午饭后，1点半出发去老街。准备去妹妹说的眼镜城找眼镜。配了眼镜，买了伞去逛了对面的深圳文和友，拍了大头贴，见识了很多不一样的事和物。晚上还是回1234商场里的遥遥酸菜鱼吃的双拼番茄酸菜鱼，吃饭的时候净是听右边的俩女生聊的她们的情感经历。吃罢饭后，又回到路边的耐克和阿迪达斯看了看鞋子，最后给妹妹买了双耐克运动鞋，希望她喜欢！！！
+* 今天上班第一天，好好加油，继续努力，保持学习！！！
+
 ## 2021-10-01
 
 星期五
