--- a/docs/zh/2021/a10.md
+++ b/docs/zh/2021/a10.md
@@ -1,5 +1,17 @@
 # 打卡记录
 
+## 2021-10-18
+
+星期一
+
+* 上周工作上是处理转测后的bug，改了3天bug后，基本上把官网微官网模块的bug给改完了。结果被分了别人的bug，情绪上有点抵制，不过还是熬了过来。
+* 上周六去了龙岗大运万科里，妙约上了妹妹和梦丽，一起去看电影《我和我的父辈》。早上9点起床，10点出门，在楼下吃了早餐，然后坐地铁去大运。我俩先到电影院，在附近找了东西吃，然后梦丽到了。她去吃了花甲粉丝汤，第二次见她，还是那么真实大方得体。快到电影开场时间1.50了，妹妹还在赶来的路上，趁此空隙，我们一行去买了奶茶，随后到电影院等妹妹到来。
+* 由于妹妹不知道电影院具体位置，我和妙往外走去迎她，终于妙说看见了。迎面走过来一个穿裙子的小姑娘，脚踏一双棋牌鞋，看上去很青春，一张笑脸散发着活力。我迎上去说到，妹妹这是买个你的奶茶，还有鸡蛋仔，等下拿着到看电影。她拿过去说好，然后我们四个就去了1号厅看电影了。
+* 看完电影已经是4点快5点了，跟在梦丽后面逛了一圈商场，边走边聊，去到了万科的《姜虎东烤肉店》。
+* 聊了很多话题，慢慢的我们4人的距离拉近了。回忆着大学时光，闲扯着三叔的盗墓笔记，吐槽这电视剧云顶天宫，看着广场上的人们发呆……
+* 8点多了，我们才准备各回各家了。最后给妹妹买了点酸奶和圣女果，和耐克的鞋子一起送给了妹妹。妹妹下地铁后，我给她发了500的见面礼红包，希望她能对我有一个比较好的印象。
+* 上周天在家休息了一天，没出门，中午吃饭的时候，妙开了一个新的电视剧《功勋》，很好看。先看了第一个故事，能问能武李延年，很激动。后面继续在看屠呦呦的礼物，周迅演的，没有看完。
+
 ## 2021-10-08
 
 星期五
