--- a/docs/zh/2021/a10.md
+++ b/docs/zh/2021/a10.md
@@ -1,5 +1,19 @@
 # 打卡记录
 
+## 2021-10-24
+
+星期天
+
+* 周末开始折腾`jmedis`，值得高兴的是基本上已经实现了一个简单的demo。包含server和client，实现了服务端多路复用器，实现了db下标切换命令select，实现了keys * 命令，实现了set、get、ping等基础命令。并部署到了服务器上，对外地址mg.meiflower.top:8000。
+* 今天是1024程序员节，和妙妙头宅在家里没有出门，中午做了香菇炒鸡和炒豇豆，晚上煮了汤和馄饨吃，也算是过的不错。
+* 上周终于将Java NIO数据看完了，里面前几章讲的是jdk1.4之后提供了新的关于nio的api，基于此我发布了 [从何而来之Java NIO](http://mg.meiflower.top/mb/%E4%BB%8E%E4%BD%95%E8%80%8C%E6%9D%A5%E4%B9%8BJava-NIO.html)的文章，并开始使用Java实现`redis`，希望能熟练运行学习到的知识。后面几章是关于正则表达式的加强，简单带过了。
+* 上周工作上多是改bug，从下周开始进入新的开发阶段。
+* 上周3晚上和老爸翠姐视频聊天，知道了家里老屋的装修已经到了尾声，电路已经正常使用了，剩下的就是铺地板了。
+* 上周4晚上和妙开始落实家庭基金的事情，我们2个的思路完全不一致，结果不是很愉快。后来我还是道歉，开始缓和关系，保证以后不会了。家庭基金就先在20号晚上充了500，由妙为家里只有分配，可以买菜，买水果，买家庭用品等。
+* 某天晚上简单的算了下一个月的支出，基本上在8300往上，消费已经很高了。
+* 昨天晚上S11的RNG vs EDG的比赛，2:3，RNG没能进入4强，可惜了！接下来看EDG能不能打的争气一点，干到DK。
+* 上周4晚上下班的时候，听了樊登讲书《意志力》，看来要把***举头三尺有神明***作为自我审视，把坏习惯改掉，迎接美好自己。
+
 ## 2021-10-18
 
 星期一
