--- a/docs/zh/2021/a10.md
+++ b/docs/zh/2021/a10.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2021-10-29
+
+星期五
+
+* 今天又到了星期五了，时间很快，周末过完，就又是新的一个月了，离过年也越来越近了就。
+* 最近在樊登读书上听了很多书籍，很有意思。看了武曌，才知晓了这个中国历史上唯一一个女皇帝的传奇；看了始皇帝，才知道了秦始皇的合纵连横，度量衡，车同轨，书同文，修建万里长城等丰功伟绩；看了硅谷钢铁侠，才知道了埃隆·马斯克这个大人物，造了火箭，电动汽车特斯拉；看了李开复AI*未来，了解到未来很多传统行业都会被AI替代，要努力往具备不被替代的潜力。
+* 昨天晚上和妙一起外出散步，边聊边走，用时1个半小时，感觉很好，很久没有这样悠闲的散步，抛掉外界烦恼了。
+* 这个周，晚上每天都有出门给妙送货，希望妙的小店生意越来越好。还有不知道为设么妙周一晚上突然一个人哭了好久，晚上还哭了半报纸，我问为什么也不告诉我，只是听她说不是我惹她的，说是来那个了心情不好。我试着安慰了，好像也没啥用，还是希望妙能别太多自扰，给自己涂填烦恼。
+* 这个周，晚上有空闲时间，就会投入到`jmedis`的开发中，到目前为止已经完成了客户端和服务端基础框架功能。该项目不是为了实现的服务能替代redis，而是为了书写优雅的代码，将设计模式，NIO多路复用，数据结构等知识利用起来加以巩固。
+
 ## 2021-10-24
 
 星期天
