--- a/docs/zh/2021/a11.md
+++ b/docs/zh/2021/a11.md
@@ -1,5 +1,18 @@
 # 打卡记录
 
+## 2021-11-13
+
+星期六
+
+* 时间很快，发生了很多事情，也仿佛从来也没发生。
+* 上周6加班，然后周天休息去看了《沙丘》电影，周一调休请假上午去医院复查，还是有2个小结节，无复发迹象。妙上午去洗牙，中午我们一同去老街，因为姐姐从惠州过来深圳了。中午请姐姐和哥哥吃了午饭，吃的椰子鸡，上饭有点慢，他俩都有点生气了。下午陪着一起逛了下商场，姐姐买了30岁生日的金首饰。大概4点我和妙一同回西丽，去看她牙齿复查。结果是，张雪周医生说我这边诊室看不了妙的病例，让周4早上再去看。
+* 回珠光路上，妙情绪又低落了。吃烤番薯的时候，我们就聊到了一些事情。关于买房子，关于会不会做饭，等等，她觉得我没担当，连个能买房子，会做饭都不敢说出口。而我则是解释说，房子现在没钱买，但是我会努力奋斗的；做饭现在也不是很会，但是我也是在做菜的过程中的。可能有些人说一些话很容易，但是我做不到我就不会说，我不想给你期望然后实现不了再开始找各种理由。
+* 回到了家，妙还是很低落。我开始做饭，炒了个洋葱鸡蛋，煎了个鱼。鱼没煎熟，开玩笑到，我鱼都煎不熟，怎么还好意思说自己会做饭呢？（苦笑）其实是我们的思维方式不同，妙认为能做几个菜就是会做饭，而我认为这不算。能在生气郁闷的气氛中吃饭，或者长时间不出来，而我则认为这样不好，时间不等人。最后妙哭着说，你就是认为自己得了病活不了多久会死，所以才要活好当下的吧？我回答说，有这方面的影响，但是这不冲突。你想活好未来，连当下现在都没有活好，怎么能确保活的好未来？你要知道未来可是由过去现在组成的啊。
+* 周4晚上是双11，妙先回来吃饭，然后9点多，我送她去坐公交，带着被子，希望她好好的。
+* 双11，我问老板需要什么，他说要个充电宝。听口气，他是比较喜欢我之前给翠姐买的带线的充电宝，所以也想要一个，我就到京东上给买了个，今天应该他能拿到手吧。
+* 重新梳理下我的项目，和我的服务器资源。并将我的项目里需要部署的资源通过my-project的gitee项目管理，原来的项目就不做维护了，给删掉。
+* 这个月发工资了，2.6w，因为有国庆3天的加班费，所以多了些，以后要继续努力，争取美好未来。
+
 ## 2021-11-05
 
 星期五
@@ -23,4 +36,3 @@
 <p>
     <img :src="$withBase('/res.2021/11/k3s-rancher.png')" alt="">
 </p>
-
