--- a/docs/zh/2021/a11.md
+++ b/docs/zh/2021/a11.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-11-21
+
+星期天
+
+* 上周4早上妙接到电话，被通知外婆去世了，然后就坐大巴赶回老家了，请了2天假，周天才回来深圳。我去北站接的她，看着她憔悴了不少，让她吃了点面包，喝了酸奶，洗了澡就睡下了。她肯定很累吧，就让妙好好睡一觉吧。
+* 本来周五要去惠州给妙燕姐姐庆生的，结果因为妙外婆的事情给耽搁了，不过还是让妙把礼物带回去送给姐姐了，然后在微信上发了红包送了祝福。
+* 周5下班后上号了，和威哥小强小东打极地大乱斗。好久没玩了，放松一下，可能也是因为妙回家了，需要打发下时间，和朋友联络下感情。
+* 列举了自己的OKR，然后按目前执行，发现很有动力，以后就用OKR来迭代自己的学习。已经将K8s相关的知识做了博客梳理，虽不详尽，但是也算是有个梳理，顺便把树莓派上安装了k3s，自己用的服务器环境都走向了云原生的时代。虽然可能有点大才小用，但是实践才是最好的学习。已基本完成拟定的OKR，现在将整理好的文章发布到看云深入学习上。
+* 周6晚上7点30，按照约定我以《运维视野拓展》为主题做了分享，与会人有威哥，小强，小灰灰。从物理机，虚拟机，容器，容器编排的发展角度为主线，最后落在容器编排k8s上，讲述了k8s是什么，k8s架构，k8s的安装工具和命令行工具，web管理工具，以及k8s的各种发行版拓展。
+* 个人生活习惯上还是要加强，早上早起，晚上早睡，不要被手机控制，没事多推进计划，适当看电视剧解压，陪陪家人，少玩手机。
+
 ## 2021-11-13
 
 星期六
