--- a/docs/zh/2021/a12.md
+++ b/docs/zh/2021/a12.md
@@ -8,4 +8,5 @@
 * 樊登读书上知道了很多过往不知道的事情和故事，以往还是太稚嫩了。觉得历史就是一堆堆年份里发生的事情，背诵的诗词歌赋也就是表面理解，没有去领悟。而现在在回过头来看，我感觉冥冥之中从远古时代有一根线，飘着穿过时间长河，落在我的手中。我开始认同历史，那些划时代的事情，活在电视剧或者书本里的英雄，都不是虚幻的，我甚至能亲眼看见他们在我手中的线上的某个位置翩翩起舞。从孔孟老庄，从秦皇到汉武，古人为我们留存的文化，我将慢慢吸收，让手中的线条逐渐清晰，分叉明了。
 * 目前的OKR是熟悉SpringCloud微服务体系，所以在学习上一边在看周立的微服务架构实战书籍，一边在将card项目改造为微服务。现在已经集成了eureka，ribbon，feign，hystrix，zuul这5大核心组件了，第一阶段完成80%。
 * 工作上，在X教练这块业务里需要APP端对接微信和支付宝，可能有些难度，不过我接收挑战，相信一定能够战胜，积累经验。然后，是12月23号，要从上梅林搬回下沙博今办公了，文韬已经在3号就搬回去了。
+* 芒果卡片开始做4.0.0版本，计划完成微服务改造。
 
