--- a/docs/zh/2021/a12.md
+++ b/docs/zh/2021/a12.md
@@ -5,7 +5,7 @@
 星期六
 
 * 工作上，上周一，二没有加班，345加班到9点才下班。在认真搞X教练的事情，认真写代码，认真对接APP微信支付和支付宝支付。
-* 生活上，因为妙今天科目三考试，所以上周妙很努力的备考，很努力的练车。怕妙一个人在外面酒店住，我也过来陪着她，希望她能考试顺利通过，下午溜达下，然后晚上请妹妹吃饭，庆祝她俩考试顺利。
+* 生活上，因为妙今天科目三考试，所以上周妙很努力的备考，很努力的练车。怕妙一个人在外面酒店住，我也过来陪着她，希望她能考试顺利通过，下午溜达下，然后晚上请妹妹吃饭，庆祝她俩考试顺利。（妙发来捷报，恭喜妙妙头顺利通过科目3，高兴呀）
 * 学习上，最近列的OKR是学习微服务，已经基本上将周立老师的微服务主线部分学习完，并自己手动体验代码，完成微服务各主流组件的体验。随后则需要自己总结，将知识提炼到看云深入学习中，最后以博客发出。
 * 习惯上，要控制自己使用手机的时长，做到上厕所不带手机，睡觉不玩手机，加油啊，大刚！！！
 
