--- a/docs/zh/2021/a12.md
+++ b/docs/zh/2021/a12.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2021-12-19
+
+星期天
+
+* 不知觉中，21年已经到了尾声，22年又要开始了。
+* 昨天X教练加班，突然分配了好多事情，一下子忙的不可开交，周一周二估计也是要加班加点了。加油吧，大刚！！！
+* 周五波哥拉着劳派的后端，10个人左右，在天台上见吃了一顿烧烤。我同他们边吃边聊，从小说聊到动漫，从动漫聊到互联网，再到元宇宙畅享，很是尽情。
+* 上周天和妙妙头下午5点一起去大沙河散步，回来途中，聊起了见家长的事情，最后不是很愉快！妙还问，为什么你总是要把我心情搞糟，然后又道歉来哄我？我说我也不想的啊，时间在一步一步往前，如果不主动出击，以后就会陷入被动。如果我们不想着以后，那是可以不用谈论，也不用难受，顺其自然其实很难。（因为其如果不发生，是不是没有的顺呢？）就此，我还是心急了，我已经有觉得自己年长的感觉了，而妙还是觉得年龄不是问题，问题是房子，孩子，以后的苦难该如何应对！每每想到这些，我们就得不出个答案，最后郁郁寡欢。（其实很多事情如果不去面对，偷偷溜走了最是轻松，但是活着世间，时间会慢慢推着你去面对）一年一年，你在长大，父母在变老，这现实规律如此，终究是没有人能逃的过。呵，那就勇敢面对，努力奋斗，为应对未来积蓄力量，加油吧少年！！！
+* 昨天老家那边，豪哥做10岁，姐姐，爸爸都有过去祝福。因为我在加班，本想晚上发个红包略表心意，可听到翠姐说已经看到了后来人。我嘴上说算了，又能怎么办，其实心里憋着气难受，也就打消了发红包的念头。你的过去，终究只是在我们这些在乎你的人心里。我的二姐，我又想你了，你在那边一切可好呀？
+* 学习上，因为最近忙碌，天气也阴冷，早上便起不来做学习了，有些落后。
+
 ## 2021-12-11
 
 星期六
