--- a/docs/zh/2021/a12.md
+++ b/docs/zh/2021/a12.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2021-12-26
+
+星期天
+
+* 这一周，工作上太忙，因为X教练需要转测，很多功能没开发完成，压力较大，所以每天加班到10点，很累。下一周估计也是这样的状态。还有周四从上梅林搬回博今了，以后就回博今上班了。
+* 因为每天晚上回来很晚，早上又早起上班，所以没空和妙相处，对我们的情感也是一种考验。希望我们能够冲过难关，走向最后的人生。前段时间，妙还说过，如果我有一天要离开，别只是通知她。我说我不会的，不会离开。其实，我很怕被现实打垮，越是长大后越发现，买房，生孩子，这些其中随便一件事都能让你束手无策，但是我不想逃避，也不能逃避，我洗完我们俩一起面对，共同去创造更加美好的未来。加油吧，大刚！！！
+* 周末折腾着把自己的博客，从hexo换成了hugo，主题也换成了简单大方的主题，所谓大道至简！只是最近自己定义的OKR没有时间推进，心里有些郁闷！
+* 今天去塘朗宝能汇买了副金耳环，准备元旦去惠州和妙一起送给阿姨做生日礼物，希望一切顺利！！！加油！！！
+
 ## 2021-12-19
 
 星期天
