--- a/docs/zh/2022/a01.md
+++ b/docs/zh/2022/a01.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2022-01-09
+
+星期天
+
+* 这一周被调到HPaaS组了，待了2天发现一直在讨论中，只有一个大概的轮廓，很难落地。希望后面能慢慢定下来，将模型、框架和辅助工具IDE落地，这样也算是能提升一大截能力。
+* 离过年越来越近了，内心有一种紧迫感和无力感。一年过去了，好像什么都没有改变。眼看着我们越来越大，父母越来越老，时间逼着人们不得不往前走，虽然那个方向不一定是往前。
+* 深圳疫情目前4例，形势又慢慢变得严峻了起来。再加上刚调到HPaaS组，每周1234晚上8点都要开会对进度，感觉压力倍增，而且多少顾虑到过年可能回不去，有些担忧。还夹杂着自己OKR上的落后带来的反向感受，让自己心情复杂，无法平静。
+* 最近在看电视剧，《雪中悍刀行》和《小敏家》，早上天气冷，睡的时间又长，再加上做饭刷碗，留着自己的时间越来越少了，没法做自己的事情了。得早起，才能让自己的生活不被落下，回归正轨。
+
 ## 2022-01-03
 
 星期一
