--- a/docs/zh/2022/a01.md
+++ b/docs/zh/2022/a01.md
@@ -1,5 +1,13 @@
 # 打卡记录
 
+## 2022-01-15
+
+星期六
+
+* 已经在HPaaS后端小组待了一个新的周了，虽然很多东西没有定论，但是每个人都有少许进展。我负责IDE方面的工作，需要编译一个IDE插件和一个Maven插件，和HPaaS3.0一同发布。虽然很多细节还不清晰，但是我有信心能够实现。加油！！！
+* 深圳的疫情有点小爆发，希望能够控制住，这样国内才能回家。目前龙岗、罗湖区是中风险地区，千万不要去。这段时间已经做了2次核酸了，那些医护人员辛苦了，希望疫情早日过去。
+* 最近工作上比较忙，学习给耽误了，spring cloud的总结还未完成，IDE的插件开发也开始一点了。现在得把OKR上的目标，spring cloud的总结继续推进，完成下去。
+
 ## 2022-01-09
 
 星期天
