--- a/docs/zh/2022/a01.md
+++ b/docs/zh/2022/a01.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-01-22
+
+星期六
+
+* 上周天去看了刚出来的《黑客帝国4》，很好看，虚拟世界里尼奥和崔妮提重逢，并且重生，2个人都进化了，可以飞。
+* 这一周继续推进HPaaS，给领导汇报了后端框架和IDE内容后，周5开始拉IDE代码框架，慢慢熟悉IDE插件的开发。由于资料较少，不太好学习。所以只能看官方英文文档，和借鉴2.5版本的代码，自己慢慢摸索了。加油！！！
+* 平安的绩效出来了，被通知是D，心里不爽。在平安8个月，待了5个项目，参与很多，但是没有归属感。文韬居然是E，小兵和波哥C，小强被领导器重是B。听说是25号发年终奖，虽然是D，但也希望不要比之前谈的8万少很多吧。其实从另一方面看换项目组这事，不一定全是坏的，未来还是无线可能的。综管里开始学习k8s，更熟悉docker。去马成一个月，接触到了openshift的okd。去上梅林，用青云的管理界面来查看k8s容器日志；去代理培训，学习并使用spring cloud，到慢慢熟练。遗憾的是没有收尾微信支付对接，代码已写。到HPaaS接触到技术的底层，虽然分在后端框架小组，但是我负责的是IDE的内容；主要是开发IDE辅助开发者对模型做二次编程。
+* 预计1月26号回家，今天22号，只剩下4天了。一年好快啊，一下子就过去了。今天抢到了腊月初5的票回深圳，希望一切都能变好，疫情早日过去。
+* 这一周把spring cloud的okr基本收尾了，算是入门spring cloud了。笔记发布了，博客也发布了。
+
 ## 2022-01-15
 
 星期六
