--- a/docs/zh/2022/a02.md
+++ b/docs/zh/2022/a02.md
@@ -16,3 +16,5 @@
 
 * 买了明天的电影票去看电影《这个杀手不太冷静》，马丽主演的喜剧，希望能很好看，渡过愉快的一天。
 * 更新了我的主页部分文字内容。
+* 期待已久的年终奖，在29号终于发了下来。只发了3万，很失望，因为被到处调动的缘故，绩效被打了D，文韬更惨被打了E。（直接上司能力不行，还到处拉帮结派，颐指气使的样子贼讨人厌）张辉总还到处打电话安慰底下的人，应该是怕年后大片的人都离职。我则是先全力以赴地把HPaaS这个项目做好，提升一波能力之后，再做新的打算。加油啊，大刚！！！
+* 新的一年，维系和妙的感情，对她的选择做出支持，慢慢熟悉电商，做为我的副业，妙的主页发展。希望新的一年，爱情美好，事业顺利，步步高升。加油啊，大刚和妙妙头！
