--- a/docs/zh/2022/a02.md
+++ b/docs/zh/2022/a02.md
@@ -1,5 +1,30 @@
 # 打卡记录
 
+## 2022-02-13
+
+星期天
+
+* 转眼年已经过完了，2月8号凌晨的票返深了，然后2月9号上班了。
+
+* 过年在家里呆了12天，家里太冷，买了个取暖器，用了下老爸说电耗高就比较少用了。家里有了新的变化，一楼装修已经竣工，我和老爸都搬了下来。
+
+* 在家的生活节奏是，白天上午11，12点起床吃中午饭，然后下午开始折腾电脑
+
+  （1. 看了个妙妙头行业的电商商品质量优化视频，有了更深的认识。
+
+  	2. 盯着妙妙头的店，当起了客服大刚。
+   	3. 学习了IDE笔记插件，在实现笔记插件的路上折腾。）
+
+  晚上吃过晚饭后，则是自由安排，大部分是自己看电脑看手机，有时候是去细二爷家聊天，聊欣哥怎么和介绍的妹子聊天。（真的很开心他能走出这一步）
+
+* 原本我是初五的票返深的，结果因为健康码变黄了（具体原因不知），经过申请转码催审核退票买票退票买票，才到8号凌晨去赶车。好的是，因为延误在家里还看了一场实实在在的雪景，放眼望去都是白茫茫一片，很是震撼。
+
+* 和妙2个星期没见面，上周的3天基本上都是粘着一块，仿佛是同一个人，希望以后也能如此恩爱。
+
+* 周五妙说姐姐让我们俩可以先去看看房子，我原本觉得没那么多钱，现在看了也买不了，但是想着先了解也是好的。昨天就和妙一起先是去中介那里问了问，了解到南山最低7万，龙岗最低4万，龙华最低4万7，坪山最低3万7。原本想着买二手房会便宜一些，结果不然，二手房是业主自己定价，多出国家指导价的部分也需要在首付里付清，那还不如去看新房。下午就去看了龙华的三水华庭的楼盘，感受了下看房流程，见识到了深圳的房价，也看到房产中介的神采和专业。最后得到的方案是4层总价390万，3成首付约100万，月供1.2万；14层总价400万，3成首付120万，月供1.5万。加油啊，大刚和妙妙头。（目前手头20万加老家房子约41万+，还差40万+）
+
+* 今天下午和妙去看长津湖之水门桥，然后去看看情人节礼物，最后晚上看跟爸爸翠姐说说我这边的情况，讨论下卖掉老家的房子的事情。
+
 ## 2022-02-02
 
 星期三
