--- a/docs/zh/2022/a02.md
+++ b/docs/zh/2022/a02.md
@@ -1,5 +1,19 @@
 # 打卡记录
 
+## 2022-02-20
+
+星期天
+
+* 本周是妙妙头创业的第一周，总体来说状态还是可以的，希望妙妙头能继续保持，把店铺事业运营发展好，实现自己的价值。当然大刚也会提供帮助，相互扶持。
+* 工作上，从下周开始要进入加班节奏了，周6也要去加班了，竭尽全力地去做好IDE的插件，提升自己的代码能力。
+* 本周一是情人节2月14，晚上我请假下班了，回来买了花给妙，然后还做了黑椒鸡柳糖心蛋意面吃，情人节快乐，妙妙头。
+* 本周二是元宵节2月15，晚上提前开完会下班了，回来吃了妙妙头煮的汤圆。然后还和老爸聊了可能会在深圳买房的念头，他听了后压力倍增。 我就安慰他说，不需要他那么大压力，该怎么生活怎么生活，总之以后的路是我们自己的选择，压力理应也是我们自己来承担。希望爸爸身体好，然后好好过好自己的生活，我也会尽量顺着他的心，孝顺他的。
+* 周3晚上回来，发现妙妙头情绪不对，后面我们俩冷战，她说是担心我们以后为钱的事情吵架。为什么总是为一些还没有发生的事情提前哭呢，她说我总是理所当然理直气壮。后来气氛一直僵持，最后到半夜2点多才慢慢变好。然后第二天早上我就起不来了，请了一上午假。可能妙觉得我太能说，总有自己的道理，不觉得是自己的错，其实这个世界上每个人都有自己的原则，都很难被别人说服，除非自己愿意。在我看来，我们是在沟通，不是吵架，也没有很大声音没有剑拔弩张，不沟通才可怕，都不知道双方的想法，只能靠猜测。每一次闹矛盾，和好后我们都能更进一步，不过我还是希望我们能相互包容相互体谅，这样这份感情才能够走的更远，长久保鲜。加油啊，妙妙头和大刚！！！
+* 周末，深圳下了2天雨，天气慢慢转冷，家里好像还下了点雪，大家都要注意保暖哦。我和妙妙头在家宅着，没有出门。原先妙妙头说自己大学宿舍的室友在广西主办婚礼邀请自己前去参加，结果因为疫情的原因没有去成。周六收到了情人节买的对戒，我们俩带上了，希望以后和和美美。
+* 这一周，妙妙头的店里的数据还可以，希望以后越来越好。春节的单基本上都发货了，待发货目前在41个。加油哦，我们！！！
+* 这2天将芒果卡片升级到了3.5.0-20220218，支持了卡片的删除功能。并且新增了几张卡片，如paxos算法，一致性hash算法，raft算法，picoContainer等。
+* 周天，妙发现个人公积金20号没法自行缴纳，有些恼火。然后我安慰到，别急，后面补缴吧，应该也不会有很大影响，以后要规避掉一些失误，减少不必要的麻烦。
+
 ## 2022-02-13
 
 星期天
@@ -13,7 +27,7 @@
   （1. 看了个妙妙头行业的电商商品质量优化视频，有了更深的认识。
 
   	2. 盯着妙妙头的店，当起了客服大刚。
-   	3. 学习了IDE笔记插件，在实现笔记插件的路上折腾。）
+  	3. 学习了IDE笔记插件，在实现笔记插件的路上折腾。）
 
   晚上吃过晚饭后，则是自由安排，大部分是自己看电脑看手机，有时候是去细二爷家聊天，聊欣哥怎么和介绍的妹子聊天。（真的很开心他能走出这一步）
 
