--- a/docs/zh/2022/a02.md
+++ b/docs/zh/2022/a02.md
@@ -1,5 +1,17 @@
 # 打卡记录
 
+## 2022-02-27
+
+星期天
+
+* 通过打电话问公积金客户人员，基本搞好了公积金个人缴纳的事情。我跟妙说，以后遇事要冷静淡定，这样才能将事情处理好。妙说她如果交自己的钱，她就没钱了，所以我就替她先交。已经交了2000了，我们俩以后一定会越来越好的。加油吧，为了更美好的未来！！！（个人账户要交满一年才能公积金贷款，贷款基数是个人加上公司合并计算的。）
+* 这是妙自由上班的第二周，目前一切正常，希望店里的数据越来越好。
+* 这周4俄乌开战了，虽然是闪电战，但还是希望世界和平。
+* 香港疫情爆发，有一天新增7000个病例，很多香港人偷渡到深圳，所以深圳疫情也变得不容乐观。很多小区都封了，打工人上班都变得难上加难了。每天都要做核酸，不然就是职场不能进，要不就是住的小区不让进。
+* 工作上，这一周还是比较累的，每天基本都是到9点后下班，然后打车回家，头晕晕的。基本上把模型生成自定义action及输入输出参数和BO、DO以及全局响应码枚举类生成好了，进入第二阶段的action类编码提示及约束。（比较难）
+* 学习上没有太多进展，今天准备将IDE笔记插件实现，已经将ide更换为2019.3.5版本，乱码问题解决了。
+* 小强面试了深信服，拿到了38k的offer，虽然网上评价不好，但是还是决定过去，预计3月21号去报道，希望他能越来越好。
+
 ## 2022-02-20
 
 星期天
