--- a/docs/zh/2022/a03.md
+++ b/docs/zh/2022/a03.md
@@ -1,5 +1,23 @@
 # 打卡记录
 
+## 2022-03-12
+
+星期六
+
+* 这一周，尽快疫情不容乐观，但还是去博今上了5天班，中午吃饭不得堂食，影响吃饭体验。另外小强在休假，下下周就去深信服了可能。
+
+* 这一周感觉很累，因为每天的时候都被充斥着。早上为了不迟到奔波，工作时间在考虑如何将代码写的更优雅，下班回来晚上要做核酸，然后到家吃饭（大部分妙妙头已经做好饭了，这才是2个人一起的好处吧），看《我们的婚姻》电视剧，然后送货（因为疫情小路被封了，要绕一大圈，很是麻烦），然后回家刷碗洗澡，最后打开电脑开始继续学习算法。第二天循环如此，是真的很累了啊。
+
+* 虽然我悟到了直面自己的坏习惯，但是可为什么总是被恶念占据上风，恶性循环呢？看来要把去往的途径都给删掉，不留后路。比如删掉手机上的哔哩哔哩APP，花太多时间刷了。
+
+* 上周天参加了力扣的283场周赛，做出来了一道题，排名4765，综合排名全国42762。先学习常用基础的数据结果，然后学习简单的算法，最近到排序算命研究，加油啊！！！
+
+  <p>
+      <img :src="$withBase('/res.2022/03/leetcode.png')" alt="">
+  </p>
+
+* 前几天，我看着妙的店里的数据，然后给她算收入。结果她以为我给她压力，其实我没有想着给她压力，我只是希望她能看清现实，然后脚踏实地。虽然会把自主创业和正常上班时的收入做对比，甚至希望能赶超，但是前几个月还是不太现实。所以前3个月需要做好充足的准备，后面店铺步上正轨就会相对轻松一些了。所以啊，妙妙头，加油啊！我会给你相应的帮助的，另外以后我不追着那么紧了，偶尔问问，也尽量不让你感觉我对你的事业不关心。正好我把自己的时候投入到算法学习中，争取今年能找到好的工作，待遇再往上走一走，加油啊，大刚！！！
+
 ## 2022-03-05
 
 星期六
