--- a/docs/zh/2022/a03.md
+++ b/docs/zh/2022/a03.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-03-19
+
+星期六
+
+* 因为疫情，这周又是在家里远程办公的一周，也是小强最后在平安的一周，时间真快，是按周过的。
+* 关于妙的店，这一周的整体数据还是不错的，接连4天销售额突破200，而且3月份有望到5000销售额。加油啊，妙妙头！！！
+* 这一周在家，没法出门，每天对着电脑办公，然后和妙做饭吃饭看电视，忙碌平淡的生活就是如此，体会着度过吧。
+* 力扣刷题，每天都坚持，目前能刷一些简单的，数组和双指针的题目。加油啊，大刚！！！排序算法学习了好几种基本的了，剩余几种也需要继续。
+* 是时候把相册整理一下了，桂林游玩，已经上传。
+
 ## 2022-03-12
 
 星期六
