--- a/docs/zh/2022/a03.md
+++ b/docs/zh/2022/a03.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-03-26
+
+星期六
+
+* 一周又过去了，闲话少说。
+* 工作上，Hpaas的IDE算是进入后续晚上阶段，后面只要继续做自定义action内代码约束和快捷提示完善，以及后续的规划需求。不过要做好IDE内的体验，还是要花一些时间的。再就是尽可能的把整个HPaaS平台的运转整理出来，这样为后面的面试项目经验做准备。
+* 生活上，因为疫情出现了不少的麻烦，但还是勇敢面对，积极生活。和妙妙头好好过日子，钱的话就看淡一点，该花的花，不能为了说要存钱买房，就做只进不出的人，这样当下都没什么生活质量了，而且感情也会慢慢消亡。另外，坏习惯从此不要再犯了，真的，切记。
+* 学习上，已经进入数据结构和算法篇章了，虽然感觉有些吃力，不过还是要坚持继续下去。不能在半途而废了，跟着左神一起，好好加强下这项技能，提升自己。
+* 腾讯云的备案已经处理了，百度云和阿里云的备案信息删除掉了。
+
 ## 2022-03-19
 
 星期六
