--- a/docs/zh/2022/a03.md
+++ b/docs/zh/2022/a03.md
@@ -9,6 +9,8 @@
 * 生活上，因为疫情出现了不少的麻烦，但还是勇敢面对，积极生活。和妙妙头好好过日子，钱的话就看淡一点，该花的花，不能为了说要存钱买房，就做只进不出的人，这样当下都没什么生活质量了，而且感情也会慢慢消亡。另外，坏习惯从此不要再犯了，真的，切记。
 * 学习上，已经进入数据结构和算法篇章了，虽然感觉有些吃力，不过还是要坚持继续下去。不能在半途而废了，跟着左神一起，好好加强下这项技能，提升自己。
 * 腾讯云的备案已经处理了，百度云和阿里云的备案信息删除掉了。
+* 这周3小强已经去深信服上班了，在大学城办公，有免费食堂福利，很不错啊，加油啊。
+* 这段时间在指导妹妹做毕业设计，希望能帮到妹妹吧，也希望她能顺利做好，加油！！！
 
 ## 2022-03-19
 
