--- a/docs/zh/2022/a04.md
+++ b/docs/zh/2022/a04.md
@@ -1,5 +1,17 @@
 # 打卡记录
 
+## 2022-04-09
+
+星期六
+
+* 这周过的很快，因为清明节放假的缘故，加上周3请假了，只上了2天班就又放假了。
+* 清明假期还发布了芒果卡片的4.0版本，支持了全文搜索特性，基于lucence实现的。
+* 周三在家用`python`基于`pyautogui`和`selenium`实现订单简单评价和发送`follow`消息的简版程序。
+* leetcode坚持刷题，慢慢积累，总会有一天质变的。加油！！！
+* 今天去民治找王医生看牙了，才发现少带了几副牙套。说是没有很么影响，还给清洗了下牙齿，然后拿了6副牙套。现在嘴里是30，还有11副就带完了第二阶段了，加油啊！！！
+* 今天晚上妙妙头去和同事吃饭，我也正好和登哥小强小耗子吃饭，吃的五和湖北菜。谢谢登哥请客，见到了小耗子，吃过饭后，大家聊了很多。从牙齿聊到各自近况，再从浪潮聊到平安金蝶，聊到面试技巧，聊到深户交税和带孩子。总之，在怀恋过去时光和憧憬未来，大家都要加油哦。
+* 今天是3月初9，是三姐的生日。我给发了200的红包，送上了生日祝福。
+
 ## 2022-04-03
 
 星期六
