--- a/docs/zh/2022/a04.md
+++ b/docs/zh/2022/a04.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-04-18
+
+星期一
+
+* 上周去医院复查了，又花了1400元，抽了血，做了B超（又发现一个小结节），然后周五还做了全身扫描检查（pet)。现在结果还没出来，可能明天出来，希望别有什么问题，千万。
+* 这周6参加了力扣杯春季赛，尝试做了3个题，只做出来1题，得2分排4000名。晚上参加了周赛，做出来3题，排1892名。周天参加了周赛，做出来2题，排4338名。等待着刷新积分排名，往前从啊大刚！！！
+* 周6妙妙头回惠州了，大刚去加班了，下午参加了力扣杯春季赛，还搞定了freemarker利用macro宏实现递归。
+* 妙妙头的店生意慢慢好了些，销售额近30天突破8000了。加油啊，妙妙头。
+* 大刚学算法继续进行中，加油啊，大刚！！！
+
 ## 2022-04-09
 
 星期六
