--- a/docs/zh/2022/a04.md
+++ b/docs/zh/2022/a04.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-04-23
+
+星期六
+
+* 复查结果出来了，虽然检查比较繁琐，请了一天假和一个上午一个下午，共2天假。第一天抽了血并且做了B超，然后约pet到周5上午。周6加班了，周天休息。这周看了结果后，病情稳定中，可以考虑后续换工作的事情了，然后打算51去见见妙妙头的父亲。
+* 生活上还是没有改掉一些坏习惯，比如熬夜，刷手机，刷B站，和家人距离拉远了。希望自己能够改掉坏习惯，保存学习的动力，和家人拉近距离，平衡好生活学习家人和工作。
+* 妙妙头的店，生意出现了一些波动，因为有个镁块的产品有安全隐患，无法继续。不过还是要稳住啊，要在稳步中前行。大刚也在用自己的方式帮助妙妙头（实现python的评价follow程序，实现指定类目下按指标选品程序），希望能使得妙妙头的店更加的好。
+* 大刚学算法继续进行中，加油啊，大刚！！！
+* 今天是充实的一天，和妙一起去了宝能环球汇，看了电影《致我的陌生恋人》，吃了烤肉，去小房间唱了歌。下午还在星巴克参与了力扣春季赛的团队赛，还是只做出来一道题积2分。要继续加油啊！！！因为明天是生日，可还是要上班就提前和妙去把生日过了。
+
 ## 2022-04-18
 
 星期一
