--- a/docs/zh/2022/a05.md
+++ b/docs/zh/2022/a05.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2022-05-14
+
+星期六
+
+* 这一周是真的忙，每天都6的开会，搞到9点左右下班，太累了，今天本来是周6还要请假，在家里休息，因为好久没有双休了。
+* 本来准备5月份开始就找工作的，简历也已经弄了一个版本了，但是突然好忙。和妙妙头商量后，还是觉得不要先提离职，等后面闲下来了再面试找到工作后再无缝衔接。
+* 今天上午突然发现plan的站点因为gitee pages的安全扫描没法更新了，所以折腾了一上午终于将站点发布到了自己的docker镜像nginx内，图片也单独托管。
+* 力扣的天梯分更新了，到了1501，全国排名3万8，加油啊，大刚！！！
+* 跟着左神学算法，继续进行中，学到了hash函数，hash碰撞，hash表实现，布隆过滤器，一致性hash，并查集，KMP等。需要花时间写笔记总结，跟进。
+* 深圳这一周下了一周的雨，衣服也时常没全干，我的背也开始隐隐作痛了，希望太阳公公快点出来啊！！！妙今天状态不佳，因为来姨妈了，我给她泡了红糖水，放了2片当归，是按妙吩咐的。
+
 ## 2022-05-09
 
 星期一
