--- a/docs/zh/2022/a05.md
+++ b/docs/zh/2022/a05.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-05-20
+
+星期五
+
+* 今天520，跟往常一样，还是上班的一天。一大早的起床了，排泄出身体里的废物，洗漱完毕后端坐在电脑前，用文字记录着曾经发送过的事情。
+* 关于工作，这周太忙，没有时间和精力分出来面试，暂且把简历给关掉了。可又收到了去支持绩效迁移的调动，我只得一边感叹这安排，一边也有些释怀，更加坚定了去做工作的念头。今天把手头上的事情了解，后面到项目上了，就开始找工作吧。所以最近得把简历再多多完善和熟悉。
+* 关于生活，妹妹顺利答辩了，大刚和妙妙头的生活也慢慢趋于平静，继续保持，继续爱妙，今天520也给妙买了眼霜和发了520红包。希望妙的店生意蒸蒸日上，每一天都笑口常开。
+* 关于提前还款，大概周三的时候，老爸回了家和我沟通后打了15万到我建行卡，我再转一万总共16万，用作贷款提前还本。因为若选择缩短年限，要去武汉贷款银行点提交材料，所以就选了年限不变的类型。做提前还本后，原来的30万，只剩下14万，后续月还款会低。
+* 关于自己，指甲长长了，头发也长长了，每天在一种平衡内，心态也保持中庸，需要慢慢摒弃坏习惯，早点睡觉，早点起床，学习新知识需要按既定计划执行，稳步成长，加油啊大刚！！！
+
 ## 2022-05-14
 
 星期六
