--- a/docs/zh/2022/a05.md
+++ b/docs/zh/2022/a05.md
@@ -1,5 +1,12 @@
 # 打卡记录
 
+## 2022-05-28
+
+星期六
+
+* 上周4晚上面试了金蝶，高级程序员或者架构师，但是很多问题没有回答好，所以这次机会就没有把握住，掉了登哥的面子。这件事反应了2点，一是已经是Java高级开发工程师了，怎么样才能突破瓶颈更上一层楼？二是面对疫情下资源骤减的大环境，面试要求也变得更加苛刻，自身年龄增长和个人实力不正比匹配的问题愈加称为当下的障碍。所以特此开辟面试突击专项OKR，来对面试做专注推进。
+* 对于面试跳升，不能急躁，不要有今天或者一周内一个月内快速实现的想法，因为面试是一个流程，少则2面，多则4到6面。所以这是一个长时间的事情，而且不能急于求成，要知道自己的重心，每一次选择都是人生一下阶段的转折点和起点。所以请认真用心准备，有计划的实施。加油啊，大刚！！！
+
 ## 2022-05-20
 
 星期五
