--- a/docs/zh/2022/a06.md
+++ b/docs/zh/2022/a06.md
@@ -1,5 +1,15 @@
 # 打卡记录
 
+## 2022-06-13
+
+星期一
+
+* 上周4下午收到了不需再迁移的消息，整个办公室，乃至整个楼层都笼罩在一团怪异的气氛中。谁曾想自己平时在公众号推文里看到的裁员新闻，这一次竟真真切切地快要发送在自己身上。面对此事，先是震惊，然后慢慢接受，最后选择接受补偿去寻找自己的下一份工作。看来，人生一场，就真的是来经历各种事情。
+* 原本就是准备要找工作了，这样也好，可以全身心投入面试突击了。加油啊，大刚！！！
+* 快到老爸生日了，时间真的很快，老爸快要59岁了，我也已经是29岁了，再也不是小孩子了。要想着准备给生日礼物给老爸了，以后的每一年都要送。然后每个月都要和家人电话聊聊家常什么的，不能因为麻烦就不实行了。（为什么会觉得麻烦，其实是懒吧）
+* 学习上，已经开启了面试突击的专题okr了。在自己深入了java的对象计算、参数传递、拆箱与装箱等知识点，后续就是修改调整一次简历，再投简历面试，希望自己能找到自己喜欢的工作。（自己喜欢，到底是怎么样的？）
+* 趁着这周还没被通知沟通补偿事宜，搞搞面试突击，搞搞之前的算法总结。加油啊，大刚！！！
+
 ## 2022-06-05
 
 星期天
@@ -8,3 +18,4 @@
 * 妙端午节前夕就买票回惠州了，大刚在30号就调到绩效迁移小组了，迁移到HPaaS，虽然很坑，但是没有办法，只能一边搞面试突击，准备好后再开始面试，争取找个好工作。加油啊，大刚！！！
 * 这2天看了《三体》（别人的解说版），知道了面壁者罗辑，黑暗森林法则，水滴探测器，二向箔降维打击等有意思科幻超前的事情，很有意思。然后还跟着看了下星际穿越，就其中的5维空间，黑洞穿越，引力弹弓等有意思的事情，然后就去看了下相对论的解说，知道了第4维度时间。
 * 生活上，这几天吃了好多面，因为面简单又好吃。鸡翅面，排骨面，炒面等。
+
