--- a/docs/zh/2022/a06.md
+++ b/docs/zh/2022/a06.md
@@ -1,5 +1,14 @@
 # 打卡记录
 
+## 2022-06-23
+
+星期四
+
+* 上周3开始请假了，就没有去博今上班了。直到今天下午才过去处理实物交接。看着24楼墙上的平安的公司战略发展图，有一种无力的感觉。虽然之前觉得裁员离自己很远，但是这一次真真切切的发生在自己身上，也只得面对现实，然后去突破自我。
+* 今天是6月23号，农历五月二十五，是老爸的五十九岁生日。在群里送上了生日祝福，然后私发了1000元的红包，希望老爸身体健康幸福安康。
+* 明天就到了24号了，已经是最后一天上班日了，还没有找到下份工作。月初面试了金蝶，周二面试了长亮，2个面试总体感觉看来有很多知识点我并没有理解的深入透彻，从而无法融会贯通。这样的水准真的无法在目前这个时期，通过Java高级开发工程师的面试。所以啊，大刚啊，加油啊，沉下心来把知识真正吸收到自己大脑内。做好个人升华后，再去争取面试，找到自己适合的工作。（因为有赔偿n+1，所有心里负担不要那么大)
+* 妙前几天会了趟老家，因为钟氏祠堂翻新，所有姓钟的都回了。妙也回去了3天，和姐姐妹妹一起多待几天，可算是少了些孤单了。
+
 ## 2022-06-13
 
 星期一
