--- a/docs/zh/2022/a07.md
+++ b/docs/zh/2022/a07.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2022-07-13
+
+星期三
+
+* 坚决改掉上厕所带手机的坏习惯，远离手机，从现在做起。（发誓脸）
+* 上周二是妙的生日，当天上午我起床下单买了菜，中午给妙做了猪排黑椒意面生日午餐，下午一起去壹方城做了一对杯子（今天下午可以去拿成品了），晚上则是吃了陶陶居，虽说只点了4个菜，但是吃的很精致，甚是有味道。随后带妙去看鞋子，想着买来送给她当做礼物，可是没有挑中。回到家后，送上了36朵一束的粉色黄色相间的鲜花，看着妙欣喜的目光，开心的不得了。最后从冰箱拿出草莓水果蛋糕，点上一根蜡烛，给妙唱了生日快乐歌。随后的妙一个小别扭（没有收到礼物，因我发红包给她没问她同意，因我不像从前一样精心准备礼物了，因我生气自己生日没有收到礼物，原因是道不明的），我们俩折腾到3点才睡，后来达成一致，给妙买条项链作为生日礼物，让挑自己喜欢的，今天许是能兑现的。
+* 接着周四（农历六月初九）是妹妹的生日，妙和我在美团定了蛋糕，我发了500红包给妹妹，同时也送上祝福。
+* 将之前辅助妙做速卖通运营的python程序，用面向对象的方式重构为妙娃机器人，实现自动获取订单号做follow和review的任务。
+* 整理和妙一起看过的电视剧卡片，发现看了好多电视剧，其实是在找共同话题，渡过一起的时间，生活磨合，应该也是要有平衡的。
+* 开启阅读计划之《Java高并发程序设计》。
+
 ## 2022-07-03
 
 星期天
