--- a/docs/zh/2022/a07.md
+++ b/docs/zh/2022/a07.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2022-07-25
+
+星期一
+
+* 上周5妹妹过来珠光了，因为她周6要去光明参加考试。随后周六是妹妹忙碌的一天，早起参加考试，中午我和妙一起去塘朗城请她吃烤肉，下午她约同学一起看电影，晚上回来然后做核酸。周天我们在家呆了一天，因为外面的天气太热了，出门就要流汗的那种。中午吃的鸭肉，晚上吃的饺子。今天妹妹和妙下午要一起回惠州了，我就一个人好好搞学习复习，为面试做好准备吧。
+* 时间很快，距离6月24已经过去1个月了，也就是一个月没有上班了，学习也是断断续续，需要加强复习，然后开启面试了，最迟在8月。
+* 妙的店经过6月份的波折，7月慢慢在回转，不过还是不理想，道路还长啊，加油啊！！！
+* 某个星期三，我和妙再次去到了壹方城，先拿了生日时候做的杯子手办（虽然和预想中的不一样，但也算是一份值得的回忆）；然后去周大福买了妙已经看中的项链（2706大洋），她看上去那么高兴，这就是值得的。
+* 前天在B站上看到张亚老师的《从0到1手写Docker》的视频（接近2个小时），了解到了docker的核心技术点。紧接着看了张亚老师的书单推荐，所以我也在zlibarary上下了很多点子书，很不错的资源站。
+* 上周4晚上，和老爸还有翠姐视频，聊了2个小时家常，很开心。可能是因为长时间没有聊，只是简单的微信导致的。看来以后要不定期的和家人联络感情，不然就淡了。
+
 ## 2022-07-13
 
 星期三
