--- a/docs/zh/2022/a08.md
+++ b/docs/zh/2022/a08.md
@@ -12,7 +12,7 @@
 
 * 7月份在家里休息学习，同时也帮妙处理一下店里的事务，几天前妙做月底结算，2个店的利润约在1.3万，很好，继续加油哦。（我能感觉到她的开心，这样是最好了）
 
-* 因为阅读，我需要一个做笔记的地方，所以方法是如果是技术类书籍则使用博文方式，是其他类书籍则写读书笔记，然后分享到mb和csdn上，以便查阅。因版权问题，无法发布到csdn，那就算了吧。
+* 因为阅读，我需要一个做笔记的地方，所以方法是如果是技术类书籍则使用博文方式，是其他类书籍则写读书笔记，然后分享到mb和csdn上，以便查阅。因版权问题，无法发布到csdn，那就算了吧。（有些文章因为版权违规，并屏蔽了）
 
   
 
