--- a/docs/zh/2022/a08.md
+++ b/docs/zh/2022/a08.md
@@ -1,5 +1,16 @@
 # 打卡记录
 
+## 2022-08-15
+
+星期一
+
+* 开始读周志明的《深入理解Java虚拟机》这本书，对JVM内存区域、垃圾收集算法、垃圾收集器、Class类文件结构以及类加载等内容慢慢熟悉，对虚拟机内容有了一定的了解。
+* 手写《Java高并发程序设计》后总结博文的知识点为卡片，方便平时记忆。
+* 上周一去医院复查，抽了血，黄主任说没什么变化，3个月后再复查。（按慧子姐姐说的吃了品利的油，但是ATG指标并未下降）
+* 刚才跟爸爸打了个电话，爸爸在家里，这几天在给茶树浇水，说是家里最高42度，茶树不浇水都要枯死了。然后说了下银行办房产证的手续这事我上次打柜台电话打不通，我说明天我再试试。
+* 最近和妙看完了《庭外》，又在继续看《人民的名义》，虽然电视剧很费时，但是还是得和妙一起做一些事情，比如周末和妙看了电影《控方证人》，磨合好相处习惯。
+* 差不多在看完2本核心的书籍并做好总结后，再把简历重新修改一版，就开始好好找工作了。
+
 ## 2022-08-06
 
 星期六
