--- a/docs/zh/2022/a08.md
+++ b/docs/zh/2022/a08.md
@@ -1,5 +1,17 @@
 # 打卡记录
 
+## 2022-08-30
+
+星期二
+
+* 芒果卡片完成[4.1.0里程碑](https://e.gitee.com/mangoorg/projects/199111/milestones/172928/issues/table)；小程序发布v4.1.0版本，桌面版v1.0.0版本。
+* [猫大刚主页](http://mg.meiflower.top)发布1.0版本，完善主页，前端页，及后端部分页面。
+* 和妙妙头一起追剧追剧，看完了《人民的民义》，再看完《琉璃》，今天晚上应该是要看完《欢乐颂3》了。
+* 书库(ibook)里下载了很多书，多看看吧，把自己的知识构建起来知识图谱，提升自己的能力。
+* 中秋节快到了，翠姐给我寄了些茶叶，让我带回妙妙头那去，嗯，正好再去买点月饼一起带过去。
+* 把《深入理解Java虚拟机》这本书看完，然后做好笔记，入口整理到猫大刚首页。然后就是修改简历一版，开始面试吧。
+* 猫大刚主页中，前端主流框架工具整理了一版，也找到很多软件工具。比如electronjs，可以web方式开发桌面版应用，后续应用到“妙娃”程序上。
+
 ## 2022-08-15
 
 星期一
@@ -10,6 +22,7 @@
 * 刚才跟爸爸打了个电话，爸爸在家里，这几天在给茶树浇水，说是家里最高42度，茶树不浇水都要枯死了。然后说了下银行办房产证的手续这事我上次打柜台电话打不通，我说明天我再试试。
 * 最近和妙看完了《庭外》，又在继续看《人民的名义》，虽然电视剧很费时，但是还是得和妙一起做一些事情，比如周末和妙看了电影《控方证人》，磨合好相处习惯。
 * 差不多在看完2本核心的书籍并做好总结后，再把简历重新修改一版，就开始好好找工作了。
+* 上周天去了民治看牙齿，拍了新的片子和牙膜，准备进入第三阶段了，加油啊！！！
 
 ## 2022-08-06
 
