--- a/docs/zh/2022/a02.md
+++ b/docs/zh/2022/a02.md
@@ -36,13 +36,12 @@
 
 * 在家的生活节奏是，白天上午11，12点起床吃中午饭，然后下午开始折腾电脑
 
-  （1. 看了个妙妙头行业的电商商品质量优化视频，有了更深的认识。
-
+  	1. 看了个妙妙头行业的电商商品质量优化视频，有了更深的认识。
   	2. 盯着妙妙头的店，当起了客服大刚。
   	3. 学习了IDE笔记插件，在实现笔记插件的路上折腾。）
-
+  
   晚上吃过晚饭后，则是自由安排，大部分是自己看电脑看手机，有时候是去细二爷家聊天，聊欣哥怎么和介绍的妹子聊天。（真的很开心他能走出这一步）
-
+  
 * 原本我是初五的票返深的，结果因为健康码变黄了（具体原因不知），经过申请转码催审核退票买票退票买票，才到8号凌晨去赶车。好的是，因为延误在家里还看了一场实实在在的雪景，放眼望去都是白茫茫一片，很是震撼。
 
 * 和妙2个星期没见面，上周的3天基本上都是粘着一块，仿佛是同一个人，希望以后也能如此恩爱。
