--- a/docs/zh/2022/a09.md
+++ b/docs/zh/2022/a09.md
@@ -7,19 +7,19 @@
 * 上周是中秋节，和妙一起去了惠州姐姐那过节。有姐姐、林哥、阿姨、妹妹、大胖和小瘦，叔叔在老家，我吃了很多好吃的。中秋晚上还吃了烧烤，窑面很好吃，还喝了一瓶啤酒。第二天上午林哥，带我们一行人去了附近的寺庙祈福🙏🏻，回来途中还在附近葡萄园摘了葡萄🍇。因为假期结束我就要面试了，所以提前一天回深圳了。
 
 <p>
-    <img src="/res/res.2022/09/01.jpeg" alt="">
+    <img src="/res/res.2022/09/01.png" alt="">
 </p>
 
 <p>
-    <img src="/res/res.2022/09/02.jpeg" alt="">
+    <img src="/res/res.2022/09/02.png" alt="">
 </p>
 
 <p>
-    <img src="/res/res.2022/09/03.jpeg" alt="">
+    <img src="/res/res.2022/09/03.png" alt="">
 </p>
 
 <p>
-    <img src="/res/res.2022/09/04.jpeg" alt="">
+    <img src="/res/res.2022/09/04.png" alt="">
 </p>
 
 * 昨天开始面试，上一周开始投递简历。昨天下午现场去面了一个叫优制云的小公司，2轮技术面1轮HR面，我开价30K，可能给不出来，HR说是他们还有老板需要终面，也不知道是不是说辞，反正我就先等着呗。因为去面试的位置是华翰科技园，没有地铁，我就打的车，来回有点晕呀。
