--- a/docs/zh/2022/a09.md
+++ b/docs/zh/2022/a09.md
@@ -1,5 +1,43 @@
 # 打卡记录
 
+## 2022-09-25
+
+星期天
+
+* 芒果卡片发布4.1.1版本，随机卡片页支持标题长度兼容。
+* 下午整理了优制云需要的入职材料，已经发给对应HR，希望能拿到offer，虽然不是理想的offer。（但是对于之后的行业大环境不乐观，还是先争取拿offer吧）
+* 已经在boss上购买了vip服务，下周希望能有面试，且把简历上的期望30K，改低为28K了。
+* 猫大刚主页内容持续更新，计划列到OKR中，严格推进，早睡早起，保持好的身心状态。
+* 关于妙妙头的事业，计算了一下8月份的账单，发现2个店的利润都不是很高，分析了一下发现物流运费上多了很多钱，所以需要调整策略；一些不赚钱的商品就不要卖了，不然也不赚钱，还费力不讨好。
+* 哔哩哔哩上成为UP主，将芒果卡片的知识搬了5张发布了，后续继续加油。
+* 整理当下计划，按计划执行，保持自我提升，别被外界因素打扰，积累到一定量时，就会质变。
+
+## 关于面试
+
+### 第一周
+
+* 9月13周二下午2点 - 优制云 高级开发工程师 - 现场面试已通过3轮，等待第4轮老板面（可能没有，给不到30K的薪资），后面3个工作日也都没有消息，应该是没有后续了。（19号上午打电话沟通终面时间1.30，可和下午的面试冲突，就说约后续时间）（已通过）
+
+* 9月14周三下午2点 - 顺丰科技 高级开发工程师一面 - 近50分钟，说是一周内反馈结果（腾讯视频）。面试感觉还行，是顺丰开放平台业务。（等待反馈）
+
+* 9月14周三晚上8点 - 吉奥时空 开发组长 - 近40分钟，是智慧城市业务，偏大数据方向，已经通过初试，后面还有机试，和复试。（一面通过）
+
+* 9月15周四下午3点 - 乐由我 Java开发工程师 - 线下面试近50分钟，是软硬交互，卖奶茶机业务（说是）（已淘汰）
+
+* 9月15周四晚上8点 - 金蝶汽车网络  Java开发 - 电话面试20分钟，已反馈不合适（已淘汰）
+
+* 9月16周五下午3点 - 中信银行信用卡中心 高级Java - 视频面试1小时20分钟，技术初试，从项目、基础、缓存、消息、框架、微服务sc、场景题全方位细致化考查。表现一般，大概率过不了。业务是银行人工智能业务。（等待反馈）（已淘汰）
+
+### 第二周
+
+* 9月19周一下午2点 - 吉奥时空 开发组长 机试和复试 -  机试题目数据表关系查询和框架代码实战，1个小时，只做到了第4题，有些尴尬；技术经理复试，聊了比较久，说不担心我技术，但是业务经验可能不太贴合，让我等待人事通知。（已淘汰）
+
+* 9月19周一晚上6点30 - 华创云鼎 高级开发工程师 -25k - （已取消），大概率是外包，就没去。
+
+* 9月20周二上午10点 - 聚思 - 初试（已取消）
+
+* 9月23周五下午1点30分 - 优制云 高级开发工程师 终面 - 加油啊，争取拿到Offer。（已经通过终面，等了3小时，但是待遇偏低25k，先争取拿到offer吧)
+
 ## 2022-09-14
 
 星期三
