--- a/docs/zh/2022/a10.md
+++ b/docs/zh/2022/a10.md
@@ -1,5 +1,24 @@
 # 打卡记录
 
+## 2022-10-16
+
+星期天
+
+* 国庆上班前，和妙头一起去西丽看了电影《万里归途》，张译和樱桃主演的，讲的是外交官带领战乱国家的华侨回国的故事。
+
+* CPU指令篇已经实现了取指周期、MOV指令、算术运算指令和逻辑运算指令，继续实现剩下的指令，加油啊。
+* 前天已经看完了《鬼吹灯之昆仑神宫》了，和妙妙头一起看的，很有意思的故事。
+* 这周去华瀚科技下的数研锦瀚子公司的智慧城市事业部上班了，前4天晚上下班很早。后面项目组开卷了，基本上是886了。说是项目很紧，11月30号上线，内部有2个时间节点，分别是10月30号和11月30号。而刚任命的项目总监是华为出来的，所以把华为的方式带到这小公司了，但是又没有对齐的补偿。这总是感觉不大对劲的，资本压榨也就这样了。看来还是先一边上班一边学习，时刻准备着找工作。（如果行情好转的话，应该是可以的，小兵放弃了惠彩，17号去入职建信金科，等着小兵内推，哈哈）
+* 昨天去加班了，刚开始第一周就上了8天班，感觉一直在上班，今天放假一天，中午应小灰灰邀请，去吃顿饭，粘粘他结婚的喜气。
+* 从2020年打卡至今，一直在循环中折腾，如何使用正念进入小世界，然后纠正身体的行为。所以感觉要多多休息正念，让自己具备更多的自控力。加油吧，大刚！
+* 现在去上班了，妙头在家弄自己的店，也算是恢复到6月份之前的状态了。但是还是得好好加油，我需要在工作中提升，也要修行猫大刚主页的基础，为自己打造良好的基础。另一方面，好好经营和妙的感情，虽然很难进入下一个步骤，被卡在深圳买房了。但还是得好好照顾妙头的情绪，稳稳经营，争取明年将妙头带回老家。
+* 对于目前的工作的几点总结：
+  * 从项目来看：深圳市住建局的项目，叫做建废监控系统，已经完成了一期平台的建设。目前是要做二期，也就是省平台，时间紧张，项目成员20人（编制30人，缺10人）。基本没有老员工，都是来了几个月的，所以大家对项目不是很乐观。
+  * 从领导来看：公司boss是湖南人，是华瀚科技的CEO，还有北大邬伦教授，是建筑废弃物处理方面的专家，从科技技术来讲占优。
+  * 从待遇来看：小公司待遇，20%的绩效工资用来考核，最低5险一金。唯一的福利是午餐和晚上加班餐免费提供，吃饭不用自己解决。
+  * 从适应度来看：已经上班一周，基本适应了。早上可以坐公交或者踩单车，晚上踩单车回家，单程30分钟，还是是比较近的。
+* 大刚，加油吧！努力学习，保持面试水准，为自己的事业而奋斗。努力存钱，为自己的爱情获取更多的保障。
+
 ## 2022-10-07
 
 星期五
